new format tax result table

--- a/output/A27_20180101/taxresults.tex
+++ b/output/A27_20180101/taxresults.tex
@@ -9,6 +9,7 @@
 \caption{Percentage change in demand due to tax/price change}
 \label{table:tax impact 1}
 \begin{center}
+\resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
 Fruit & Baseline (kg) &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
 Apricots &0.000108 &-19\% &-0.228\% &-3.28\% &15.7\% &-48.2\% \\
@@ -45,13 +46,14 @@ Rhubarb &1.42e-05 &102\% &-100\% &-2.8\% &11.9\% &-29\% \\
 Sharon fruits &2.86e-05 &-4.63\% &0.0192\% &-5.39\% &34.1\% &-54.6\% \\
  \hline \hline
 \multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows baseline demand for each fruit (kilograms per household per shopping trip). The remaining columns show the percentage change in demand resulting from the change in tax or prices.}
-\end{tabular}
+\end{tabular}}
 \end{center}
 \end{table}
 \begin{table}[h]
 \caption{Percentage change in price due to tax/price change}
 \label{table:tax impact 2}
 \begin{center}
+\resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
 Fruit & Baseline &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
 Apricots &0.837 &6.52\% &-1.44e-13\% &2.21\% &-10\% &20\% \\
@@ -88,13 +90,14 @@ Rhubarb &3.92 &0.11\% &9.87\% &1.78\% &-10\% &20\% \\
 Sharon fruits &8.56 &0.5\% &6.1e-11\% &1.7\% &-10\% &20\% \\
  \hline \hline
 \multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows the baseline price for each fruit (GBP per kilogram). The remaining columns show the percentage impact of the change in tax or prices.}
-\end{tabular}
+\end{tabular}}
 \end{center}
 \end{table}
 \begin{table}[h]
 \caption{Tax impact on expenditure and welfare}
 \label{table:tax impact welfare}
 \begin{center}
+\resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
  & Baseline &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
 Consumer expenditure & & & & & & \\
@@ -117,7 +120,7 @@ Tax revenue (GBP) & 0.0 &0.241 &0.0357 &0.11 &-0.722 &1.23 \\
 Firm Revenue & 6.83 &-1.85\% &-0.0564\% &-0.881\% &5.73\% &-9.98\% \\
  \hline \hline
 \multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows the baseline values for expenditure, consumer surplus, firm revenue and tax revenue. All amounts are measured in pounds per household per shopping trip. Columns 2 - 7 show the percentage change in expenditure, the absolute change in consumer surplus, the percentage change in firm revenue and the absolute change in tax revenue arising in each scenario. Because of quasilinear utility the change in consumer surplus equals compensating variation.}
-\end{tabular}
+\end{tabular}}
 \end{center}
 \end{table}
 \end{document}
