--- a/output/A27_20180101/elas1.tex
+++ b/output/A27_20180101/elas1.tex
@@ -11,13 +11,13 @@
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Apricots &Avocados &Bananas &Berries &Cherries &Dates &Apples \\ \hline
-p$_{Apricots}$\textbf{-2} &0.0529 &0 &0 &0 &0 &0 \\
-p$_{Avocados}$ &1.28\textbf{-2.96} &-7.42e-05 &0.00996 &0 &1.19 &0.00224 \\
-p$_{Bananas}$ &0 &-0.0314\textbf{-0.614} &-0.0592 &0.0198 &-0.11 &0.108 \\
-p$_{Berries}$ &0 &0.194 &-0.00272\textbf{-1.67} &0 &1.29e-11 &0.0354 \\
-p$_{Cherries}$ &0 &0 &1.89e-05 &0\textbf{-4.22} &0 &0 \\
-p$_{Dates}$ &0 &0.241 &-5.29e-05 &0 &0\textbf{-3.57} &0 \\
-p$_{Apples}$ &0 &0.774 &0.0879 &0.626 &0 &0\textbf{-1.97} \\
+p$_{Apricots}$ &\textbf{-2} &0.0529 &0 &0 &0 &0 &0 \\
+p$_{Avocados}$ &1.28 &\textbf{-2.96} &-7.42e-05 &0.00996 &0 &1.19 &0.00224 \\
+p$_{Bananas}$ &0 &-0.0314 &\textbf{-0.614} &-0.0592 &0.0198 &-0.11 &0.108 \\
+p$_{Berries}$ &0 &0.194 &-0.00272 &\textbf{-1.67} &0 &1.29e-11 &0.0354 \\
+p$_{Cherries}$ &0 &0 &1.89e-05 &0 &\textbf{-4.22} &0 &0 \\
+p$_{Dates}$ &0 &0.241 &-5.29e-05 &0 &0 &\textbf{-3.57} &0 \\
+p$_{Apples}$ &0 &0.774 &0.0879 &0.626 &0 &0 &\textbf{-1.97} \\
 p$_{Easy Peelers}$ &-2.75e-12 &-0.524 &0.0906 &0.317 &0.148 &0.788 &0.894 \\
 p$_{Grapes}$ &0 &0.143 &-0.0408 &0.0205 &-0.22 &-2.61e-12 &0.29 \\
 p$_{Grapefruits}$ &0.608 &-0.0988 &-0.00196 &0 &0 &0 &0 \\
@@ -54,13 +54,13 @@ p$_{Berries}$ &0.0222 &0.0041 &0 &-0.00249 &0.0189 &0 &-0.14 \\
 p$_{Cherries}$ &0.000214 &-0.000908 &0 &0 &0 &0 &0 \\
 p$_{Dates}$ &0.000575 &0 &0 &-0.000354 &-0.000178 &0 &0 \\
 p$_{Apples}$ &1.11 &1.02 &0 &0.761 &0.898 &0 &0.959 \\
-p$_{Easy Peelers}$\textbf{-2.12} &0.438 &-0.17 &0.285 &0.495 &-0.59 &8.24 \\
-p$_{Grapes}$ &0.154\textbf{-2.14} &0.209 &-0.0411 &0.0474 &0 &0 \\
-p$_{Grapefruits}$ &-0.000832 &0.00291\textbf{-4.69} &0.000474 &-0.0139 &0 &0 \\
-p$_{Kiwis}$ &0.177 &-0.1 &0.083\textbf{-3.55} &0.502 &0 &0 \\
-p$_{Lemons}$ &0.0351 &0.00957 &-0.202 &0.0416\textbf{-3.42} &0 &-4.16 \\
-p$_{Limes}$ &-0.000148 &0 &0 &0 &0\textbf{-2.88} &0 \\
-p$_{Lychees}$ &0.00341 &0 &0 &0 &-0.0243 &0\textbf{-17.9} \\
+p$_{Easy Peelers}$ &\textbf{-2.12} &0.438 &-0.17 &0.285 &0.495 &-0.59 &8.24 \\
+p$_{Grapes}$ &0.154 &\textbf{-2.14} &0.209 &-0.0411 &0.0474 &0 &0 \\
+p$_{Grapefruits}$ &-0.000832 &0.00291 &\textbf{-4.69} &0.000474 &-0.0139 &0 &0 \\
+p$_{Kiwis}$ &0.177 &-0.1 &0.083 &\textbf{-3.55} &0.502 &0 &0 \\
+p$_{Lemons}$ &0.0351 &0.00957 &-0.202 &0.0416 &\textbf{-3.42} &0 &-4.16 \\
+p$_{Limes}$ &-0.000148 &0 &0 &0 &0 &\textbf{-2.88} &0 \\
+p$_{Lychees}$ &0.00341 &0 &0 &0 &-0.0243 &0 &\textbf{-17.9} \\
 p$_{Mangos}$ &0 &0 &0 &0.00106 &0 &0 &0 \\
 p$_{Melons}$ &0.22 &0.0119 &0 &0.0133 &0 &0 &0 \\
 p$_{Nectarines}$ &-0.031 &0.0531 &0.00331 &0.465 &0.304 &1.92 &0 \\
@@ -97,13 +97,13 @@ p$_{Kiwis}$ &0.0172 &0.0143 &0.32 &0.0745 &0 &1.36 &1.26 \\
 p$_{Lemons}$ &0 &0 &0.0173 &0 &0 &0 &0 \\
 p$_{Limes}$ &0 &0 &0.000387 &0 &0 &0 &-0.0061 \\
 p$_{Lychees}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Mangos}$\textbf{-4.06} &0.0274 &0.00186 &0.023 &-0.0512 &0 &0 \\
-p$_{Melons}$ &0.414\textbf{-3.26} &0.289 &0.0577 &0 &0 &0 \\
-p$_{Nectarines}$ &0.0438 &0.451\textbf{-2.37} &-0.057 &0 &0 &0.613 \\
-p$_{Oranges}$ &0.417 &0.0695 &-0.0439\textbf{-1.95} &0 &0 &0 \\
-p$_{Passion fruits}$ &-0.000892 &0 &0 &0\textbf{-9.12} &0 &0 \\
-p$_{Paw-paws}$ &0 &0 &0 &0 &0\textbf{-4.17} &0 \\
-p$_{Peaches}$ &0 &0 &0.0149 &0 &0 &0\textbf{-8.13} \\
+p$_{Mangos}$ &\textbf{-4.06} &0.0274 &0.00186 &0.023 &-0.0512 &0 &0 \\
+p$_{Melons}$ &0.414 &\textbf{-3.26} &0.289 &0.0577 &0 &0 &0 \\
+p$_{Nectarines}$ &0.0438 &0.451 &\textbf{-2.37} &-0.057 &0 &0 &0.613 \\
+p$_{Oranges}$ &0.417 &0.0695 &-0.0439 &\textbf{-1.95} &0 &0 &0 \\
+p$_{Passion fruits}$ &-0.000892 &0 &0 &0 &\textbf{-9.12} &0 &0 \\
+p$_{Paw-paws}$ &0 &0 &0 &0 &0 &\textbf{-4.17} &0 \\
+p$_{Peaches}$ &0 &0 &0.0149 &0 &0 &0 &\textbf{-8.13} \\
 p$_{Pears}$ &0.187 &0.251 &0.768 &1.08 &0 &0 &0.257 \\
 p$_{Pineapples}$ &0.00581 &-0.000111 &-0.00401 &0.152 &0.000551 &-0.00725 &0 \\
 p$_{Plums}$ &-0.0386 &0.192 &-0.0056 &0.124 &-0.0637 &-7.62e-12 &0 \\
@@ -140,12 +140,12 @@ p$_{Oranges}$ &0.441 &1.13 &0.254 &0 &0 &0.409 \\
 p$_{Passion fruits}$ &0 &3.93e-06 &-0.000125 &19.7 &0 &0 \\
 p$_{Paw-paws}$ &0 &-6.36e-05 &0 &0 &0 &0 \\
 p$_{Peaches}$ &0.00329 &0 &0 &0 &0 &0 \\
-p$_{Pears}$\textbf{-1.21} &1.03 &0.273 &0 &3.66e-12 &0.088 \\
-p$_{Pineapples}$ &0.0566\textbf{-3.04} &0.294 &0 &0.967 &0 \\
-p$_{Plums}$ &0.054 &1.06\textbf{-1.71} &1.3 &0 &-0.447 \\
-p$_{Pomegranates}$ &0 &0 &0.000739\textbf{-28.5} &0 &0 \\
-p$_{Rhubarb}$ &0 &0.000682 &0 &0\textbf{-4.13} &0 \\
-p$_{Sharon fruits}$ &1.49e-05 &0 &-0.000383 &0 &0\textbf{-2.56} \\
+p$_{Pears}$ &\textbf{-1.21} &1.03 &0.273 &0 &3.66e-12 &0.088 \\
+p$_{Pineapples}$ &0.0566 &\textbf{-3.04} &0.294 &0 &0.967 &0 \\
+p$_{Plums}$ &0.054 &1.06 &\textbf{-1.71} &1.3 &0 &-0.447 \\
+p$_{Pomegranates}$ &0 &0 &0.000739 &\textbf{-28.5} &0 &0 \\
+p$_{Rhubarb}$ &0 &0.000682 &0 &0 &\textbf{-4.13} &0 \\
+p$_{Sharon fruits}$ &1.49e-05 &0 &-0.000383 &0 &0 &\textbf{-2.56} \\
 \end{tabular}
 \end{center}
 \end{table}
