--- a/output/A27_20180101/taxresults.tex
+++ b/output/A27_20180101/taxresults.tex
@@ -11,7 +11,9 @@
 \begin{center}
 \resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
-Fruit & Baseline (kg) &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
+    ' & & Scenario 1 & Scenario 2 & Scenario 3 & S…'     ' \\ '
+
+Fruit & Baseline (kg) &EU Tariff &UK Cost Shock &Merger &Subsidy &VAT \\ \hline
 Apricots &0.000108 &-19\% &-0.228\% &-3.28\% &15.7\% &-48.2\% \\
 Avocados &0.000499 &-2.93\% &4.65\% &-2.59\% &15.2\% &-22.6\% \\
 Bananas &0.641 &1.13\% &0.0428\% &-0.522\% &3.77\% &-7.43\% \\
@@ -55,7 +57,9 @@ Sharon fruits &2.86e-05 &-4.63\% &0.0192\% &-5.39\% &34.1\% &-54.6\% \\
 \begin{center}
 \resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
-Fruit & Baseline &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
+    ' & & Scenario 1 & Scenario 2 & Scenario 3 & S…'     ' \\ '
+
+Fruit & Baseline &EU Tariff &UK Cost Shock &Merger &Subsidy &VAT \\ \hline
 Apricots &0.837 &6.52\% &-1.44e-13\% &2.21\% &-10\% &20\% \\
 Avocados &4.4 &1.93\% &2.62e-11\% &1.73\% &-10\% &20\% \\
 Bananas &1.45 &-2.1e-11\% &-2.1e-11\% &1.56\% &-10\% &20\% \\
@@ -99,7 +103,10 @@ Sharon fruits &8.56 &0.5\% &6.1e-11\% &1.7\% &-10\% &20\% \\
 \begin{center}
 \resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
- & Baseline &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
+    ' & & Scenario 1 & Scenario 2 & Scenario 3 & S…'     ' \\'
+
+    ' & & Scenario 1 & Scenario 2 & Scenario 3 & S…'     ' \\ \hline'
+
 Consumer expenditure & & & & & & \\
 10th percentile &3.36 &0.689\% &0.415\% &0.419\% &-3.59\% &3.69\% \\
 25th percentile &4.73 &1.21\% &0.489\% &0.606\% &-4.49\% &6.66\% \\
