--- a/output/A27_20180101/taxresults.tex
+++ b/output/A27_20180101/taxresults.tex
@@ -12,7 +12,7 @@
 \resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
  &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 \\ 
-Fruit & Baseline (kg) &EU Tariff &UK Cost Shock &Merger &Subsidy &VAT \\ \hline
+Fruit & Baseline (kg) &EU tariff &UK cost shock &Merger &Subsidy &VAT \\ \hline
 Apricots &0.000108 &-19\% &-0.228\% &-3.28\% &15.7\% &-48.2\% \\
 Avocados &0.000499 &-2.93\% &4.65\% &-2.59\% &15.2\% &-22.6\% \\
 Bananas &0.641 &1.13\% &0.0428\% &-0.522\% &3.77\% &-7.43\% \\
@@ -46,7 +46,7 @@ Pomegranates &7.83e-05 &-58.7\% &4.98\% &0.867\% &69.2\% &-100\% \\
 Rhubarb &1.42e-05 &102\% &-100\% &-2.8\% &11.9\% &-29\% \\
 Sharon fruits &2.86e-05 &-4.63\% &0.0192\% &-5.39\% &34.1\% &-54.6\% \\
  \hline \hline
-\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows baseline demand for each fruit (kilograms per household per shopping trip). The remaining columns show the percentage change in demand resulting from the change in tax or prices.}
+\multicolumn{7}{p{1.0 \textwidth}}{Note: The first column shows baseline demand for each fruit (kilograms per household per shopping trip). The remaining columns show the percentage change in demand resulting from the change in tax or prices.}
 \end{tabular}}
 \end{center}
 \end{table}
@@ -57,7 +57,7 @@ Sharon fruits &2.86e-05 &-4.63\% &0.0192\% &-5.39\% &34.1\% &-54.6\% \\
 \resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
  &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 \\ 
-Fruit & Baseline &EU Tariff &UK Cost Shock &Merger &Subsidy &VAT \\ \hline
+Fruit & Baseline &EU tariff &UK cost shock &Merger &Subsidy &VAT \\ \hline
 Apricots &0.837 &6.52\% &-1.44e-13\% &2.21\% &-10\% &20\% \\
 Avocados &4.4 &1.93\% &2.62e-11\% &1.73\% &-10\% &20\% \\
 Bananas &1.45 &-2.1e-11\% &-2.1e-11\% &1.56\% &-10\% &20\% \\
@@ -91,7 +91,7 @@ Pomegranates &2.07 &3.71\% &-4.84e-11\% &1.14\% &-10\% &20\% \\
 Rhubarb &3.92 &0.11\% &9.87\% &1.78\% &-10\% &20\% \\
 Sharon fruits &8.56 &0.5\% &6.1e-11\% &1.7\% &-10\% &20\% \\
  \hline \hline
-\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows the baseline price for each fruit (GBP per kilogram). The remaining columns show the percentage impact of the change in tax or prices.}
+\multicolumn{7}{p{1.0 \textwidth}}{Note: The first column shows the baseline price for each fruit (GBP per kilogram). The remaining columns show the percentage impact of the change in tax or prices.}
 \end{tabular}}
 \end{center}
 \end{table}
@@ -102,8 +102,7 @@ Sharon fruits &8.56 &0.5\% &6.1e-11\% &1.7\% &-10\% &20\% \\
 \resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
  &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 \\
-    ' &  & Scenario 1 & Scenario 2 & Scenario 3 & …'     ' \\ \hline'
-
+ &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 &VAT \\ \hline
 Consumer expenditure & & & & & & \\
 10th percentile &3.36 &0.689\% &0.415\% &0.419\% &-3.59\% &3.69\% \\
 25th percentile &4.73 &1.21\% &0.489\% &0.606\% &-4.49\% &6.66\% \\
@@ -123,7 +122,7 @@ Consumer surplus (GBP) & 12.9 &-0.245 &-0.0362 &-0.111 &0.702 &-1.3 \\
 Tax revenue (GBP) & 0.0 &0.241 &0.0357 &0.11 &-0.722 &1.23 \\
 Firm Revenue & 6.83 &-1.85\% &-0.0564\% &-0.881\% &5.73\% &-9.98\% \\
  \hline \hline
-\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows the baseline values for expenditure, consumer surplus, firm revenue and tax revenue. All amounts are measured in pounds per household per shopping trip. Columns 2 - 7 show the percentage change in expenditure, the absolute change in consumer surplus, the percentage change in firm revenue and the absolute change in tax revenue arising in each scenario. Because of quasilinear utility the change in consumer surplus equals compensating variation.}
+\multicolumn{7}{p{1.0 \textwidth}}{Note: The first column shows the baseline values for expenditure, consumer surplus, firm revenue and tax revenue. All amounts are measured in pounds per household per shopping trip. Columns 2 - 7 show the percentage change in expenditure, the absolute change in consumer surplus, the percentage change in firm revenue and the absolute change in tax revenue arising in each scenario. Because of quasilinear utility the change in consumer surplus equals compensating variation.}
 \end{tabular}}
 \end{center}
 \end{table}
