--- a/output/A27_20180101/taxresults.tex
+++ b/output/A27_20180101/taxresults.tex
@@ -102,7 +102,7 @@ Sharon fruits &8.56 &0.5\% &6.1e-11\% &1.7\% &-10\% &20\% \\
 \resizebox{1 \textwidth}{!}{
 \begin{tabular}{lcccccc} \hline \hline
  &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 \\
- &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 &VAT \\ \hline
+ & Baseline &EU tariff &UK cost shock &Merger &Subsidy &VAT \\ \hline
 Consumer expenditure & & & & & & \\
 10th percentile &3.36 &0.689\% &0.415\% &0.419\% &-3.59\% &3.69\% \\
 25th percentile &4.73 &1.21\% &0.489\% &0.606\% &-4.49\% &6.66\% \\
