--- a/output/A27_20180101/taxresults.tex
+++ b/output/A27_20180101/taxresults.tex
@@ -120,7 +120,7 @@ Change in consumer surplus (GBP) & & & & & & \\
 Per capita effects & & & & & & \\
 Consumer surplus (GBP) & 12.9 &-0.245 &-0.0362 &-0.111 &0.702 &-1.3 \\
 Tax revenue (GBP) & 0.0 &0.241 &0.0357 &0.11 &-0.722 &1.23 \\
-Firm Revenue & 6.83 &-1.85\% &-0.0564\% &-0.881\% &5.73\% &-9.98\% \\
+Firm Revenue & 6.83 &-3.35e+03 &-102 &-1.59e+03 &1.04e+04 &-1.81e+04 \\
  \hline \hline
 \multicolumn{7}{p{1.0 \textwidth}}{Note: The first column shows the baseline values for expenditure, consumer surplus, firm revenue and tax revenue. All amounts are measured in pounds per household per shopping trip. Columns 2 - 7 show the percentage change in expenditure, the absolute change in consumer surplus, the percentage change in firm revenue and the absolute change in tax revenue arising in each scenario. Because of quasilinear utility the change in consumer surplus equals compensating variation.}
 \end{tabular}}
