--- a/output/A27_2018MAY/figures/elas1.tex
+++ b/output/A27_2018MAY/figures/elas1.tex
@@ -11,33 +11,33 @@
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Apricots &Avocados &Bananas &Berries &Cherries &Dates &Apples \\ \hline
-p$_{Apricots}$ &\textbf{-2.36} &-0.00101 &0.000581 &-0.00375 &0 &0 &-0.000212 \\
-p$_{Avocados}$ &-0.00129 &\textbf{-2.32} &0.008 &-0.00122 &0.109 &1.23e-11 &-0.00908 \\
-p$_{Bananas}$ &0.0135 &0.145 &\textbf{-0.693} &0.0148 &-0.0514 &-0.111 &0.0731 \\
-p$_{Berries}$ &-0.0694 &-0.0176 &0.0118 &\textbf{-1.07} &0.0189 &-0.135 &0.0566 \\
-p$_{Cherries}$ &0 &0.0508 &-0.00132 &0.000602 &\textbf{-3.34} &0 &-0.00495 \\
-p$_{Dates}$ &0 &0 &-0.0125 &0.178 &0 &\textbf{-60.7} &-0.149 \\
-p$_{Apples}$ &-0.0108 &-0.361 &0.15 &0.319 &-0.424 &-53.5 &\textbf{-0.458} \\
-p$_{Easy Peelers}$ &0 &0.0146 &0.149 &-0.00985 &0 &0.346 &0.00334 \\
-p$_{Grapes}$ &-0.00932 &-0.026 &-0.0849 &0.306 &0.00147 &-0.297 &-0.0336 \\
-p$_{Grapefruits}$ &0 &0 &-0.000687 &0.00269 &0 &0.0775 &-0.00358 \\
-p$_{Kiwis}$ &0.0255 &0.452 &0.0923 &-0.0933 &-0.237 &0 &0.0252 \\
-p$_{Lemons}$ &0.0135 &-0.671 &0.006 &0.217 &0.0313 &3.95e-05 &0.0135 \\
-p$_{Limes}$ &-0.003 &0.14 &-0.000399 &-0.00336 &0.0787 &0.0118 &-0.00228 \\
-p$_{Lychees}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Mangos}$ &0.00337 &0.0941 &0.0198 &0.00432 &0.0986 &0.000646 &0.127 \\
-p$_{Melons}$ &0 &-0.016 &-0.0781 &0.0402 &0.0264 &0.581 &-0.0362 \\
-p$_{Nectarines}$ &0.196 &0.0812 &-0.00226 &0.00629 &0.164 &0 &0.0929 \\
-p$_{Oranges}$ &-0.0148 &0.346 &-0.0801 &-0.017 &0.0742 &0.692 &-0.065 \\
-p$_{Passion fruits}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Paw-paws}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Peaches}$ &-0.00838 &0 &-0.00651 &0.0601 &-0.141 &0 &-0.00264 \\
-p$_{Pears}$ &0.00553 &0.117 &0.212 &-0.00215 &0.0132 &-0.00232 &-0.00908 \\
-p$_{Pineapples}$ &0.072 &-0.0144 &0.0168 &-0.543 &0.0092 &-0.000865 &0.249 \\
-p$_{Plums}$ &0.152 &0.0253 &0.00643 &0.000357 &-0.0872 &0.00021 &0.0337 \\
-p$_{Pomegranates}$ &-0.0155 &0 &0.000401 &-5.58e-05 &0.000249 &0 &3.17e-05 \\
-p$_{Rhubarb}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Sharon fruits}$ &0 &0 &0.00707 &0.0718 &0 &0.222 &-0.00794 \\
+p$_{Apricots}$ &\textbf{-3.29} &0.0203 &0.0395 &-0.0124 &-0.155 &0 &-0.00139 \\
+p$_{Avocados}$ &0.00475 &\textbf{-2.3} &0.00623 &-0.0238 &0.231 &0.117 &-0.0141 \\
+p$_{Bananas}$ &0.205 &0.138 &\textbf{-1.17} &0.0338 &-0.344 &-0.928 &0.111 \\
+p$_{Berries}$ &-0.0605 &-0.496 &0.0318 &\textbf{-0.727} &0.00955 &-0.741 &0.0251 \\
+p$_{Cherries}$ &-0.00637 &0.0406 &-0.00273 &8.05e-05 &\textbf{-3.79} &0 &-0.00305 \\
+p$_{Dates}$ &0 &0.0252 &-0.00904 &-0.00767 &0 &\textbf{-2.43} &-0.00105 \\
+p$_{Apples}$ &-0.0253 &-1.09 &0.389 &0.0935 &-1.35 &-0.379 &\textbf{-1.04} \\
+p$_{Easy Peelers}$ &0.219 &0.13 &0.379 &-0.0145 &-0.0523 &0.54 &0.00131 \\
+p$_{Grapes}$ &-0.0303 &-0.0966 &-0.19 &0.294 &0.0349 &-0.271 &0.0088 \\
+p$_{Grapefruits}$ &-0.00343 &0 &-0.00296 &0.00291 &0 &0.00472 &-0.00497 \\
+p$_{Kiwis}$ &0.45 &0.0325 &0.04 &-0.109 &-0.0514 &0 &0.0254 \\
+p$_{Lemons}$ &-0.097 &-0.154 &-0.00135 &0.121 &0.417 &0 &0.033 \\
+p$_{Limes}$ &-0.00136 &0.197 &-0.00373 &-0.00307 &0.0343 &0.00155 &-0.00164 \\
+p$_{Lychees}$ &0 &0 &0 &-7.65e-05 &0 &0 &0 \\
+p$_{Mangos}$ &-0.0224 &0.0416 &-0.0026 &-0.00408 &0.105 &0 &0.0535 \\
+p$_{Melons}$ &-0.00479 &0.248 &-0.0352 &-0.0213 &0 &0.427 &-0.0239 \\
+p$_{Nectarines}$ &0.234 &0.244 &0.0244 &-0.00776 &0.063 &-0.248 &0.2 \\
+p$_{Oranges}$ &-0.171 &0.41 &-0.142 &-0.0282 &0.407 &0.92 &-0.0132 \\
+p$_{Passion fruits}$ &-0.00272 &0 &0 &7.61e-05 &0 &0 &9.96e-05 \\
+p$_{Paw-paws}$ &0 &0 &-0.000482 &-1.68e-06 &0.0469 &0 &-0.000574 \\
+p$_{Peaches}$ &0.0195 &0 &-0.0074 &0.0258 &-0.00831 &0 &5.08e-05 \\
+p$_{Pears}$ &0.0681 &0.861 &0.199 &-0.023 &0.453 &0.044 &0.0157 \\
+p$_{Pineapples}$ &0.229 &-0.000746 &0.0318 &0.0575 &-0.00642 &-0.00023 &0.0215 \\
+p$_{Plums}$ &0.488 &0.0412 &0.0189 &-0.0315 &-0.0303 &8e-05 &0.114 \\
+p$_{Pomegranates}$ &0.0153 &3.43e-05 &0.00169 &-0.000419 &0 &0 &0.000238 \\
+p$_{Rhubarb}$ &0 &0 &-0.00234 &-0.00131 &0 &0.00093 &-2.27e-05 \\
+p$_{Sharon fruits}$ &0 &-0.0332 &-0.0124 &0.121 &0.0364 &0.52 &-0.0187 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -47,33 +47,33 @@ p$_{Sharon fruits}$ &0 &0 &0.00707 &0.0718 &0 &0.222 &-0.00794 \\
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Easy Peelers &Grapes &Grapefruits &Kiwis &Lemons &Limes &Lychees \\ \hline
-p$_{Apricots}$ &0 &-0.000229 &0 &0.00147 &0.000615 &-0.00185 &NaN \\
-p$_{Avocados}$ &0.00434 &-0.000817 &0 &0.0334 &-0.039 &0.11 &NaN \\
-p$_{Bananas}$ &0.804 &-0.0484 &-0.0696 &0.125 &0.00633 &-0.0057 &NaN \\
-p$_{Berries}$ &-0.0425 &0.139 &0.218 &-0.0997 &0.182 &-0.0383 &NaN \\
-p$_{Cherries}$ &0 &2.16e-05 &0 &-0.00824 &0.000846 &0.0288 &NaN \\
-p$_{Dates}$ &2.14 &-0.00186 &0.0862 &0 &4.56e-07 &0.00185 &NaN \\
-p$_{Apples}$ &1.96 &-0.0421 &-0.797 &0.0743 &0.0311 &-0.0715 &NaN \\
-p$_{Easy Peelers}$ &\textbf{-1.93} &-0.0084 &-0.00637 &0.0262 &-0.00132 &-0.00991 &NaN \\
-p$_{Grapes}$ &-0.0795 &\textbf{-0.442} &0.453 &-0.0172 &0.095 &-0.0437 &NaN \\
-p$_{Grapefruits}$ &-0.000339 &0.00255 &\textbf{-3.87} &0 &0.00999 &-0.000288 &NaN \\
-p$_{Kiwis}$ &0.106 &-0.00734 &0 &\textbf{-1} &-0.115 &-0.0514 &NaN \\
-p$_{Lemons}$ &-0.00679 &0.0515 &0.962 &-0.146 &\textbf{-0.821} &-0.0664 &NaN \\
-p$_{Limes}$ &-0.00375 &-0.00174 &-0.00204 &-0.00483 &-0.00494 &\textbf{-2.87} &NaN \\
-p$_{Lychees}$ &0 &0 &0 &0 &0 &0 &\textbf{NaN} \\
-p$_{Mangos}$ &0.111 &0.0596 &0.0566 &0.00106 &0.0171 &0.0951 &NaN \\
-p$_{Melons}$ &-0.0956 &0.0646 &0.362 &-0.00158 &-0.0359 &0.277 &NaN \\
-p$_{Nectarines}$ &0.0373 &-0.00547 &0.0159 &0.145 &-0.205 &0.234 &NaN \\
-p$_{Oranges}$ &0.0567 &-0.0735 &-0.011 &-0.0096 &-0.0101 &0.137 &NaN \\
-p$_{Passion fruits}$ &0 &0 &0 &0 &0 &0 &NaN \\
-p$_{Paw-paws}$ &0 &0 &0 &0 &0 &0 &NaN \\
-p$_{Peaches}$ &-0.00231 &0.0131 &0.0702 &-0.195 &0.052 &0.00593 &NaN \\
-p$_{Pears}$ &0.279 &-0.0405 &-0.00735 &0.0331 &-0.00223 &0 &NaN \\
-p$_{Pineapples}$ &1.08e-05 &0.246 &0.0498 &0.425 &0.0838 &-0.00428 &NaN \\
-p$_{Plums}$ &0 &-0.00106 &0 &0.094 &-0.0147 &-0.0513 &NaN \\
-p$_{Pomegranates}$ &0 &0 &0 &0.000176 &0 &-0.000125 &NaN \\
-p$_{Rhubarb}$ &0 &0 &0 &0 &0 &0 &NaN \\
-p$_{Sharon fruits}$ &-0.0147 &0.017 &0.0506 &0 &0.0197 &0.0226 &NaN \\
+p$_{Apricots}$ &0.166 &-0.00534 &-0.054 &0.167 &-0.0461 &-0.0218 &0 \\
+p$_{Avocados}$ &0.0231 &-0.00399 &0 &0.00282 &-0.0172 &0.741 &0 \\
+p$_{Bananas}$ &1.49 &-0.173 &-0.241 &0.0768 &-0.00356 &-0.31 &0 \\
+p$_{Berries}$ &-0.0536 &0.251 &0.223 &-0.197 &0.28 &-0.24 &-1.31 \\
+p$_{Cherries}$ &-0.00163 &0.000253 &0 &-0.000782 &0.00815 &0.0226 &0 \\
+p$_{Dates}$ &0.0207 &-0.00241 &0.00375 &0 &0 &0.00125 &1.91e-12 \\
+p$_{Apples}$ &0.018 &0.0282 &-1.42 &0.171 &0.286 &-0.478 &0 \\
+p$_{Easy Peelers}$ &\textbf{-2.95} &-0.00116 &-0.00329 &0.000173 &0.000649 &-0.0917 &4.15e-12 \\
+p$_{Grapes}$ &-0.00497 &\textbf{-1.39} &1.02 &-0.0258 &0.114 &-0.0196 &0.0371 \\
+p$_{Grapefruits}$ &-0.000158 &0.0114 &\textbf{-4.01} &-0.00176 &0.0478 &0.0818 &0.433 \\
+p$_{Kiwis}$ &0.000354 &-0.0123 &-0.0749 &\textbf{-2.09} &-0.0632 &-0.0578 &0 \\
+p$_{Lemons}$ &0.00103 &0.0422 &1.58 &-0.0492 &\textbf{-2.05} &-0.188 &-0.315 \\
+p$_{Limes}$ &-0.00434 &-0.000216 &0.0803 &-0.00133 &-0.00559 &\textbf{-5.91} &0 \\
+p$_{Lychees}$ &0 &1.86e-06 &0.00194 &0 &-4.26e-05 &0 &\textbf{-1.39} \\
+p$_{Mangos}$ &0.149 &0.0638 &0.117 &0 &-0.0188 &0 &0 \\
+p$_{Melons}$ &-0.148 &0.209 &0.0738 &0 &-0.016 &0.804 &0 \\
+p$_{Nectarines}$ &-0.0148 &-0.000116 &-0.101 &-0.00471 &-0.158 &0.776 &0 \\
+p$_{Oranges}$ &-0.00753 &-0.14 &-0.0146 &-0.00219 &0.00319 &0.298 &0 \\
+p$_{Passion fruits}$ &0 &0 &0 &0 &0 &0 &0 \\
+p$_{Paw-paws}$ &-0.00185 &0.000378 &0 &0 &0 &0 &0 \\
+p$_{Peaches}$ &-0.000312 &0.0141 &0.248 &-0.163 &0.131 &-0.0793 &0 \\
+p$_{Pears}$ &0.699 &-0.091 &-0.00341 &0.0454 &0.000981 &-0.00877 &0 \\
+p$_{Pineapples}$ &-0.00367 &0.0224 &0.0709 &0.499 &0.025 &0 &-0.189 \\
+p$_{Plums}$ &-0.000581 &-0.0055 &-0.00411 &0.494 &-0.0778 &-0.0487 &0.195 \\
+p$_{Pomegranates}$ &3.89e-05 &5.88e-06 &-0.000499 &0.000544 &0 &0 &0 \\
+p$_{Rhubarb}$ &-0.0184 &0.00288 &0 &0 &0.000551 &0.0144 &0.0399 \\
+p$_{Sharon fruits}$ &-0.257 &0.169 &0.748 &0 &0.131 &0.0431 &1.2e-11 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -83,33 +83,33 @@ p$_{Sharon fruits}$ &-0.0147 &0.017 &0.0506 &0 &0.0197 &0.0226 &NaN \\
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Mangos &Melons &Nectarines &Oranges &Passion fruits &Paw-paws &Peaches \\ \hline
-p$_{Apricots}$ &0.000232 &0 &0.011 &-0.000683 &NaN &NaN &-0.000748 \\
-p$_{Avocados}$ &0.00829 &-0.00124 &0.00582 &0.0205 &NaN &NaN &0 \\
-p$_{Bananas}$ &0.0317 &-0.11 &-0.00294 &-0.0858 &NaN &NaN &-0.0135 \\
-p$_{Berries}$ &0.00551 &0.045 &0.00696 &-0.0145 &NaN &NaN &0.0993 \\
-p$_{Cherries}$ &0.00404 &0.000951 &0.00546 &0.00204 &NaN &NaN &-0.00755 \\
-p$_{Dates}$ &1.13e-05 &0.626 &0 &0.00814 &NaN &NaN &0 \\
-p$_{Apples}$ &0.444 &0.45 &0.265 &-0.153 &NaN &NaN &-0.012 \\
-p$_{Easy Peelers}$ &0.0329 &-0.0249 &0.00899 &0.0113 &NaN &NaN &-0.000887 \\
-p$_{Grapes}$ &0.167 &0.159 &-0.0125 &-0.138 &NaN &NaN &0.0475 \\
-p$_{Grapefruits}$ &0.000891 &0.00501 &0.000204 &-0.000116 &NaN &NaN &0.00143 \\
-p$_{Kiwis}$ &0.00126 &-0.00166 &0.141 &-0.00768 &NaN &NaN &-0.301 \\
-p$_{Lemons}$ &0.026 &-0.0478 &-0.253 &-0.0103 &NaN &NaN &0.103 \\
-p$_{Limes}$ &0.0106 &0.0273 &0.0213 &0.0102 &NaN &NaN &0.000904 \\
-p$_{Lychees}$ &0 &0 &0 &0 &NaN &NaN &0 \\
-p$_{Mangos}$ &\textbf{-2.07} &0.223 &0.3 &0.164 &NaN &NaN &-0.000797 \\
-p$_{Melons}$ &0.253 &\textbf{-1.59} &0.11 &0.211 &NaN &NaN &-0.00439 \\
-p$_{Nectarines}$ &0.368 &0.119 &\textbf{-1.96} &-0.0531 &NaN &NaN &0.00914 \\
-p$_{Oranges}$ &0.245 &0.276 &-0.0644 &\textbf{-0.481} &NaN &NaN &0.00187 \\
-p$_{Passion fruits}$ &0 &0 &0 &0 &\textbf{NaN} &NaN &0 \\
-p$_{Paw-paws}$ &0 &0 &0 &0 &NaN &\textbf{NaN} &0 \\
-p$_{Peaches}$ &-0.000615 &-0.00298 &0.00574 &0.000967 &NaN &NaN &\textbf{-1.32} \\
-p$_{Pears}$ &0.173 &0.114 &0.00242 &0.0548 &NaN &NaN &-0.00179 \\
-p$_{Pineapples}$ &-5.86e-05 &-9.8e-05 &-0.144 &-0.0067 &NaN &NaN &0.347 \\
-p$_{Plums}$ &0.0114 &-0.00284 &0.0923 &-0.00102 &NaN &NaN &-0.103 \\
-p$_{Pomegranates}$ &0 &0 &-0.00312 &0.000328 &NaN &NaN &-0.0016 \\
-p$_{Rhubarb}$ &0 &0 &0 &0 &NaN &NaN &0 \\
-p$_{Sharon fruits}$ &0.0235 &0.122 &0.00358 &0.000899 &NaN &NaN &0 \\
+p$_{Apricots}$ &-0.0181 &-0.0048 &0.101 &-0.0884 &-3.86 &0 &0.0256 \\
+p$_{Avocados}$ &0.00786 &0.0581 &0.0264 &0.0496 &0 &0 &0 \\
+p$_{Bananas}$ &-0.0108 &-0.182 &0.0576 &-0.381 &0 &-0.439 &-0.0502 \\
+p$_{Berries}$ &-0.0158 &-0.104 &-0.0172 &-0.071 &0.526 &-0.00144 &0.165 \\
+p$_{Cherries}$ &0.00349 &0 &0.00118 &0.00865 &0 &0.339 &-0.000448 \\
+p$_{Dates}$ &0 &0.0216 &-0.0057 &0.024 &0 &0 &0 \\
+p$_{Apples}$ &0.784 &-0.434 &1.65 &-0.124 &2.57 &-1.83 &0.00121 \\
+p$_{Easy Peelers}$ &0.158 &-0.196 &-0.00891 &-0.00513 &0 &-0.43 &-0.000539 \\
+p$_{Grapes}$ &0.146 &1.2 &-0.000298 &-0.411 &0 &0.378 &0.105 \\
+p$_{Grapefruits}$ &0.00598 &0.00469 &-0.00292 &-0.000478 &0 &0 &0.0206 \\
+p$_{Kiwis}$ &0 &0 &-0.00579 &-0.00306 &0 &0 &-0.576 \\
+p$_{Lemons}$ &-0.0319 &-0.0336 &-0.151 &0.00347 &0 &0 &0.36 \\
+p$_{Limes}$ &0 &0.0502 &0.022 &0.00961 &0 &0 &-0.00648 \\
+p$_{Lychees}$ &0 &0 &0 &0 &0 &0 &0 \\
+p$_{Mangos}$ &\textbf{-6.69} &0.105 &0.828 &0.432 &0 &0 &0.00696 \\
+p$_{Melons}$ &0.0848 &\textbf{-6.85} &0.0519 &1.04 &0 &0 &0.0119 \\
+p$_{Nectarines}$ &0.768 &0.114 &\textbf{-4.05} &-0.00961 &0 &0.0146 &-0.00358 \\
+p$_{Oranges}$ &0.208 &2.02 &-0.00846 &\textbf{-2.65} &0 &1.03 &-0.00396 \\
+p$_{Passion fruits}$ &0 &0 &0 &0 &\textbf{-4.88} &0 &0 \\
+p$_{Paw-paws}$ &0 &0 &3.77e-05 &0.00303 &0 &\textbf{-2.82} &0 \\
+p$_{Peaches}$ &0.00429 &0.00906 &-0.00124 &-0.00156 &0 &0 &\textbf{-2.05} \\
+p$_{Pears}$ &0.409 &0.668 &0.0217 &0.171 &0 &1.69 &-0.00609 \\
+p$_{Pineapples}$ &0 &0 &-0.0232 &0 &0 &0 &0.171 \\
+p$_{Plums}$ &0.00596 &-0.0104 &0.106 &0 &0 &0 &-0.363 \\
+p$_{Pomegranates}$ &0 &0 &-0.000325 &0.00376 &0 &0 &-0.00301 \\
+p$_{Rhubarb}$ &-0.00339 &0.0706 &-0.00707 &0.0265 &0 &0 &-5.56e-06 \\
+p$_{Sharon fruits}$ &0.346 &0.509 &0.228 &-0.0308 &0 &0 &0 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -119,33 +119,33 @@ p$_{Sharon fruits}$ &0.0235 &0.122 &0.00358 &0.000899 &NaN &NaN &0 \\
 \begin{center}
 \begin{tabular}{lcccccc} \hline \hline
 Price &Pears &Pineapples &Plums &Pomegranates &Rhubarb &Sharon fruits \\ \hline
-p$_{Apricots}$ &0.000838 &0.00663 &0.027 &-0.0673 &NaN &0 \\
-p$_{Avocados}$ &0.0227 &-0.0017 &0.00573 &0 &NaN &0 \\
-p$_{Bananas}$ &0.745 &0.036 &0.0264 &0.0404 &NaN &0.0433 \\
-p$_{Berries}$ &-0.00604 &0.108 &0.00117 &-0.00449 &NaN &0.351 \\
-p$_{Cherries}$ &0.00119 &0.000504 &-0.00918 &0.000642 &NaN &0 \\
-p$_{Dates}$ &-8.94e-05 &-2.03e-05 &9.47e-06 &0 &NaN &0.0149 \\
-p$_{Apples}$ &-0.0701 &0.0346 &0.303 &0.00701 &NaN &-0.107 \\
-p$_{Easy Peelers}$ &0.182 &4.29e-06 &0 &0 &NaN &-0.0167 \\
-p$_{Grapes}$ &-0.25 &0.0578 &-0.00762 &-3.82e-12 &NaN &0.182 \\
-p$_{Grapefruits}$ &-0.000255 &0.00105 &0 &0 &NaN &0.00305 \\
-p$_{Kiwis}$ &0.0868 &0.672 &0.288 &0.0132 &NaN &0 \\
-p$_{Lemons}$ &-0.00744 &0.168 &-0.0574 &0 &NaN &0.114 \\
-p$_{Limes}$ &0 &-0.000641 &-0.0147 &-0.000879 &NaN &0.00969 \\
-p$_{Lychees}$ &0 &0 &0 &0 &NaN &0 \\
-p$_{Mangos}$ &0.38 &-7.84e-05 &0.0293 &0 &NaN &0.09 \\
-p$_{Melons}$ &0.286 &-0.000149 &-0.0083 &0 &NaN &0.53 \\
-p$_{Nectarines}$ &0.00655 &-0.236 &0.292 &-0.241 &NaN &0.0168 \\
-p$_{Oranges}$ &0.18 &-0.0134 &-0.0039 &0.0308 &NaN &0.00513 \\
-p$_{Passion fruits}$ &0 &0 &0 &0 &NaN &0 \\
-p$_{Paw-paws}$ &0 &0 &0 &0 &NaN &0 \\
-p$_{Peaches}$ &-0.00304 &0.31 &-0.204 &-0.0776 &NaN &0 \\
-p$_{Pears}$ &\textbf{-2.78} &5.59e-05 &0.0139 &0.0291 &NaN &-0.00425 \\
-p$_{Pineapples}$ &9.21e-05 &\textbf{-3.95} &2.06 &0.267 &NaN &-0.000282 \\
-p$_{Plums}$ &0.0119 &0.0354 &\textbf{-2.01} &0.0362 &NaN &0 \\
-p$_{Pomegranates}$ &0.00102 &0.00567 &0.00148 &\textbf{-2.01} &NaN &0 \\
-p$_{Rhubarb}$ &0 &0 &0 &0 &\textbf{NaN} &0 \\
-p$_{Sharon fruits}$ &-0.00245 &-9.84e-05 &0 &0 &NaN &\textbf{-2.01} \\
+p$_{Apricots}$ &0.0611 &0.189 &0.323 &0.374 &0 &0 \\
+p$_{Avocados}$ &0.181 &-0.000144 &0.00639 &0.000196 &0 &-0.00372 \\
+p$_{Bananas}$ &0.924 &0.137 &0.0647 &0.213 &-0.379 &-0.0307 \\
+p$_{Berries}$ &-0.101 &0.231 &-0.102 &-0.0498 &-0.2 &0.282 \\
+p$_{Cherries}$ &0.0167 &-0.000218 &-0.000826 &0 &0 &0.000716 \\
+p$_{Dates}$ &0.00199 &-9.58e-06 &2.67e-06 &0 &0.00147 &0.0126 \\
+p$_{Apples}$ &0.256 &0.325 &1.38 &0.105 &-0.0129 &-0.163 \\
+p$_{Easy Peelers}$ &0.827 &-0.004 &-0.000508 &0.00125 &-0.758 &-0.162 \\
+p$_{Grapes}$ &-0.463 &0.105 &-0.0207 &0.000813 &0.51 &0.458 \\
+p$_{Grapefruits}$ &-0.000194 &0.00372 &-0.000173 &-0.000773 &0 &0.0227 \\
+p$_{Kiwis}$ &0.11 &1.11 &0.884 &0.0358 &0 &0 \\
+p$_{Lemons}$ &0.00185 &0.0434 &-0.109 &0 &0.0362 &0.131 \\
+p$_{Limes}$ &-0.000491 &0 &-0.00201 &0 &0.0281 &0.00129 \\
+p$_{Lychees}$ &0 &-4.44e-05 &3.67e-05 &0 &0.000355 &0 \\
+p$_{Mangos}$ &0.69 &0 &0.0049 &0 &-0.131 &0.205 \\
+p$_{Melons}$ &0.599 &0 &-0.00686 &0 &2.21 &0.243 \\
+p$_{Nectarines}$ &0.0427 &-0.042 &0.154 &-0.0174 &-0.486 &0.24 \\
+p$_{Oranges}$ &0.297 &0 &0 &0.182 &1.6 &-0.0285 \\
+p$_{Passion fruits}$ &0 &0 &0 &0 &0 &0 \\
+p$_{Paw-paws}$ &0.00859 &0 &0 &0 &0 &0 \\
+p$_{Peaches}$ &-0.00417 &0.109 &-0.184 &-0.056 &-0.000133 &0 \\
+p$_{Pears}$ &\textbf{-5.06} &0.0803 &0.0166 &0.0822 &1.56 &-0.00984 \\
+p$_{Pineapples}$ &0.0873 &\textbf{-3.57} &0.0288 &0.166 &0.00102 &0 \\
+p$_{Plums}$ &0.0224 &0.0359 &\textbf{-3.83} &-0.493 &0.218 &0 \\
+p$_{Pomegranates}$ &0.00302 &0.00563 &-0.0134 &\textbf{-2.88} &0 &0 \\
+p$_{Rhubarb}$ &0.0448 &2.7e-05 &0.00461 &0 &\textbf{-8.74} &0.00136 \\
+p$_{Sharon fruits}$ &-0.0185 &0 &0 &0 &0.089 &\textbf{-2.18} \\
 \end{tabular}
 \end{center}
 \end{table}
