new output files

--- a/output/A27_2018MAY/figures/baskets.tex
+++ b/output/A27_2018MAY/figures/baskets.tex
@@ -15,88 +15,72 @@
 HH ID & Fruit basket \\
 1 & Bananas \\
 1 & Bananas,Apples \\
-1 & Bananas,Apples,Grapes \\
-1 & Bananas,Apples,Grapes,Mangos \\
-1 & Bananas,Apples,Grapes,Mangos,Melons \\
-1 & Bananas,Apples,Grapes,Mangos,Melons,Nectarines \\
-1 & Bananas,Apples,Grapes,Mangos,Melons,Nectarines,Oranges \\
-1 & Bananas,Apples,Grapes,Mangos,Melons,Nectarines,Oranges,Pears \\
-1 & Bananas,Apples,Grapes,Mangos,Melons,Nectarines,Oranges,Pears,Sharon fruits \\
+1 & Bananas,Apples,Easy Peelers \\
+1 & Bananas,Apples,Easy Peelers,Grapes \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Nectarines \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Nectarines,Oranges \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Nectarines,Oranges,Peaches \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Nectarines,Oranges,Peaches,Plums \\
 2 & Bananas \\
-2 & Bananas,Apples \\
-2 & Bananas,Apples,Grapes \\
-2 & Bananas,Apples,Grapes,Mangos \\
-2 & Bananas,Apples,Grapes,Mangos,Melons \\
-2 & Bananas,Apples,Grapes,Mangos,Melons,Nectarines \\
-2 & Bananas,Apples,Grapes,Mangos,Melons,Nectarines,Oranges \\
-2 & Bananas,Apples,Grapes,Mangos,Melons,Nectarines,Oranges,Pears \\
-2 & Bananas,Apples,Grapes,Mangos,Melons,Nectarines,Oranges,Pears,Sharon fruits \\
-3 & Avocados \\
-3 & Avocados,Bananas \\
-3 & Avocados,Bananas,Apples \\
-3 & Avocados,Bananas,Apples,Easy Peelers \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes,Lemons \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes,Lemons,Mangos \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes,Lemons,Mangos,Melons \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes,Lemons,Mangos,Melons,Nectarines \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes,Lemons,Mangos,Melons,Nectarines,Oranges \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes,Lemons,Mangos,Melons,Nectarines,Oranges,Pears \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes,Lemons,Mangos,Melons,Nectarines,Oranges,Pears,Rhubarb \\
-3 & Avocados,Bananas,Apples,Easy Peelers,Grapes,Lemons,Mangos,Melons,Nectarines,Oranges,Pears,Rhubarb,Sharon fruits \\
-4 & Avocados \\
-4 & Avocados,Apples \\
-4 & Avocados,Apples,Lemons \\
-4 & Avocados,Apples,Lemons,Mangos \\
-4 & Avocados,Apples,Lemons,Mangos,Melons \\
-4 & Avocados,Apples,Lemons,Mangos,Melons,Nectarines \\
-4 & Avocados,Apples,Lemons,Mangos,Melons,Nectarines,Oranges \\
-4 & Avocados,Apples,Lemons,Mangos,Melons,Nectarines,Oranges,Pears \\
-4 & Avocados,Apples,Lemons,Mangos,Melons,Nectarines,Oranges,Pears,Sharon fruits \\
-5 & Bananas \\
-5 & Bananas,Berries \\
-5 & Bananas,Berries,Apples \\
-5 & Bananas,Berries,Apples,Grapes \\
-5 & Bananas,Berries,Apples,Grapes,Melons \\
-5 & Bananas,Berries,Apples,Grapes,Melons,Nectarines \\
-5 & Bananas,Berries,Apples,Grapes,Melons,Nectarines,Pears \\
-5 & Bananas,Berries,Apples,Grapes,Melons,Nectarines,Pears,Plums \\
-5 & Bananas,Berries,Apples,Grapes,Melons,Nectarines,Pears,Plums,Sharon fruits \\
-6 & Bananas \\
-6 & Bananas,Berries \\
-6 & Bananas,Berries,Apples \\
-6 & Bananas,Berries,Apples,Easy Peelers \\
-6 & Bananas,Berries,Apples,Easy Peelers,Grapes \\
-6 & Bananas,Berries,Apples,Easy Peelers,Grapes,Lemons \\
-6 & Bananas,Berries,Apples,Easy Peelers,Grapes,Lemons,Nectarines \\
-6 & Bananas,Berries,Apples,Easy Peelers,Grapes,Lemons,Nectarines,Pears \\
-6 & Bananas,Berries,Apples,Easy Peelers,Grapes,Lemons,Nectarines,Pears,Plums \\
-6 & Bananas,Berries,Apples,Easy Peelers,Grapes,Lemons,Nectarines,Pears,Plums,Sharon fruits \\
-7 & Avocados \\
-7 & Avocados,Bananas \\
-7 & Avocados,Bananas,Berries \\
-7 & Avocados,Bananas,Berries,Apples \\
-7 & Avocados,Bananas,Berries,Apples,Kiwis \\
-7 & Avocados,Bananas,Berries,Apples,Kiwis,Lemons \\
-7 & Avocados,Bananas,Berries,Apples,Kiwis,Lemons,Nectarines \\
-7 & Avocados,Bananas,Berries,Apples,Kiwis,Lemons,Nectarines,Pears \\
-7 & Avocados,Bananas,Berries,Apples,Kiwis,Lemons,Nectarines,Pears,Plums \\
-8 & Bananas \\
-8 & Bananas,Berries \\
-8 & Bananas,Berries,Apples \\
-8 & Bananas,Berries,Apples,Grapes \\
-8 & Bananas,Berries,Apples,Grapes,Kiwis \\
-8 & Bananas,Berries,Apples,Grapes,Kiwis,Lemons \\
-8 & Bananas,Berries,Apples,Grapes,Kiwis,Lemons,Nectarines \\
-8 & Bananas,Berries,Apples,Grapes,Kiwis,Lemons,Nectarines,Plums \\
-9 & Avocados \\
-9 & Avocados,Bananas \\
-9 & Avocados,Bananas,Berries \\
-9 & Avocados,Bananas,Berries,Apples \\
-9 & Avocados,Bananas,Berries,Apples,Melons \\
-9 & Avocados,Bananas,Berries,Apples,Melons,Nectarines \\
-9 & Avocados,Bananas,Berries,Apples,Melons,Nectarines,Pears \\
-9 & Avocados,Bananas,Berries,Apples,Melons,Nectarines,Pears,Plums \\
+2 & Bananas,Easy Peelers \\
+2 & Bananas,Easy Peelers,Grapes \\
+2 & Bananas,Easy Peelers,Grapes,Peaches \\
+2 & Bananas,Easy Peelers,Grapes,Peaches,Pears \\
+2 & Bananas,Easy Peelers,Grapes,Peaches,Pears,Plums \\
+3 & Berries \\
+3 & Berries,Easy Peelers \\
+3 & Berries,Easy Peelers,Grapes \\
+3 & Berries,Easy Peelers,Grapes,Melons \\
+3 & Berries,Easy Peelers,Grapes,Melons,Peaches \\
+3 & Berries,Easy Peelers,Grapes,Melons,Peaches,Pears \\
+4 & Bananas \\
+4 & Bananas,Apples \\
+4 & Bananas,Apples,Easy Peelers \\
+4 & Bananas,Apples,Easy Peelers,Grapes \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Peaches \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Peaches,Pears \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Peaches,Pears,Plums \\
+5 & Berries \\
+5 & Berries,Apples \\
+5 & Berries,Apples,Easy Peelers \\
+5 & Berries,Apples,Easy Peelers,Grapes \\
+5 & Berries,Apples,Easy Peelers,Grapes,Kiwis \\
+5 & Berries,Apples,Easy Peelers,Grapes,Kiwis,Peaches \\
+5 & Berries,Apples,Easy Peelers,Grapes,Kiwis,Peaches,Pears \\
+5 & Berries,Apples,Easy Peelers,Grapes,Kiwis,Peaches,Pears,Plums \\
+6 & Berries \\
+6 & Berries,Apples \\
+6 & Berries,Apples,Easy Peelers \\
+6 & Berries,Apples,Easy Peelers,Grapes \\
+6 & Berries,Apples,Easy Peelers,Grapes,Peaches \\
+6 & Berries,Apples,Easy Peelers,Grapes,Peaches,Pears \\
+6 & Berries,Apples,Easy Peelers,Grapes,Peaches,Pears,Plums \\
+7 & Bananas \\
+7 & Bananas,Berries \\
+7 & Bananas,Berries,Apples \\
+7 & Bananas,Berries,Apples,Easy Peelers \\
+7 & Bananas,Berries,Apples,Easy Peelers,Grapes \\
+7 & Bananas,Berries,Apples,Easy Peelers,Grapes,Kiwis \\
+7 & Bananas,Berries,Apples,Easy Peelers,Grapes,Kiwis,Lemons \\
+7 & Bananas,Berries,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Peaches \\
+7 & Bananas,Berries,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Peaches,Pears \\
+7 & Bananas,Berries,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Peaches,Pears,Pineapples \\
+7 & Bananas,Berries,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Peaches,Pears,Pineapples,Plums \\
+8 & Berries \\
+8 & Berries,Apples \\
+8 & Berries,Apples,Easy Peelers \\
+8 & Berries,Apples,Easy Peelers,Grapes \\
+8 & Berries,Apples,Easy Peelers,Grapes,Peaches \\
+8 & Berries,Apples,Easy Peelers,Grapes,Peaches,Pears \\
+8 & Berries,Apples,Easy Peelers,Grapes,Peaches,Pears,Plums \\
+9 & Berries \\
+9 & Berries,Apples \\
+9 & Berries,Apples,Easy Peelers \\
+9 & Berries,Apples,Easy Peelers,Grapes \\
+9 & Berries,Apples,Easy Peelers,Grapes,Pears \\
+9 & Berries,Apples,Easy Peelers,Grapes,Pears,Plums \\
 \hline \hline
 \end{tabular}
 \end{center}
