--- a/output/A27_2018MAY/figures/elas1.tex
+++ b/output/A27_2018MAY/figures/elas1.tex
@@ -11,33 +11,33 @@
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Apricots &Avocados &Bananas &Berries &Cherries &Dates &Apples \\ \hline
-p$_{Apricots}$ &\textbf{-3.29} &0.0203 &0.0395 &-0.0124 &-0.155 &0 &-0.00139 \\
-p$_{Avocados}$ &0.00475 &\textbf{-2.3} &0.00623 &-0.0238 &0.231 &0.117 &-0.0141 \\
-p$_{Bananas}$ &0.205 &0.138 &\textbf{-1.17} &0.0338 &-0.344 &-0.928 &0.111 \\
-p$_{Berries}$ &-0.0605 &-0.496 &0.0318 &\textbf{-0.727} &0.00955 &-0.741 &0.0251 \\
-p$_{Cherries}$ &-0.00637 &0.0406 &-0.00273 &8.05e-05 &\textbf{-3.79} &0 &-0.00305 \\
-p$_{Dates}$ &0 &0.0252 &-0.00904 &-0.00767 &0 &\textbf{-2.43} &-0.00105 \\
-p$_{Apples}$ &-0.0253 &-1.09 &0.389 &0.0935 &-1.35 &-0.379 &\textbf{-1.04} \\
-p$_{Easy Peelers}$ &0.219 &0.13 &0.379 &-0.0145 &-0.0523 &0.54 &0.00131 \\
-p$_{Grapes}$ &-0.0303 &-0.0966 &-0.19 &0.294 &0.0349 &-0.271 &0.0088 \\
-p$_{Grapefruits}$ &-0.00343 &0 &-0.00296 &0.00291 &0 &0.00472 &-0.00497 \\
-p$_{Kiwis}$ &0.45 &0.0325 &0.04 &-0.109 &-0.0514 &0 &0.0254 \\
-p$_{Lemons}$ &-0.097 &-0.154 &-0.00135 &0.121 &0.417 &0 &0.033 \\
-p$_{Limes}$ &-0.00136 &0.197 &-0.00373 &-0.00307 &0.0343 &0.00155 &-0.00164 \\
-p$_{Lychees}$ &0 &0 &0 &-7.65e-05 &0 &0 &0 \\
-p$_{Mangos}$ &-0.0224 &0.0416 &-0.0026 &-0.00408 &0.105 &0 &0.0535 \\
-p$_{Melons}$ &-0.00479 &0.248 &-0.0352 &-0.0213 &0 &0.427 &-0.0239 \\
-p$_{Nectarines}$ &0.234 &0.244 &0.0244 &-0.00776 &0.063 &-0.248 &0.2 \\
-p$_{Oranges}$ &-0.171 &0.41 &-0.142 &-0.0282 &0.407 &0.92 &-0.0132 \\
-p$_{Passion fruits}$ &-0.00272 &0 &0 &7.61e-05 &0 &0 &9.96e-05 \\
-p$_{Paw-paws}$ &0 &0 &-0.000482 &-1.68e-06 &0.0469 &0 &-0.000574 \\
-p$_{Peaches}$ &0.0195 &0 &-0.0074 &0.0258 &-0.00831 &0 &5.08e-05 \\
-p$_{Pears}$ &0.0681 &0.861 &0.199 &-0.023 &0.453 &0.044 &0.0157 \\
-p$_{Pineapples}$ &0.229 &-0.000746 &0.0318 &0.0575 &-0.00642 &-0.00023 &0.0215 \\
-p$_{Plums}$ &0.488 &0.0412 &0.0189 &-0.0315 &-0.0303 &8e-05 &0.114 \\
-p$_{Pomegranates}$ &0.0153 &3.43e-05 &0.00169 &-0.000419 &0 &0 &0.000238 \\
-p$_{Rhubarb}$ &0 &0 &-0.00234 &-0.00131 &0 &0.00093 &-2.27e-05 \\
-p$_{Sharon fruits}$ &0 &-0.0332 &-0.0124 &0.121 &0.0364 &0.52 &-0.0187 \\
+p$_{Apricots}$ &\textbf{-14.7} &0 &0.00781 &-0.000131 &0 &0 &-0.00123 \\
+p$_{Avocados}$ &-7.35e-12 &\textbf{-1.93} &-0.00451 &-0.0232 &0.226 &0.00919 &-0.0107 \\
+p$_{Bananas}$ &2.45 &-0.0626 &\textbf{-0.709} &0.0832 &0.155 &0.331 &-0.103 \\
+p$_{Berries}$ &-0.059 &-0.464 &0.12 &\textbf{-0.87} &-0.261 &-0.972 &0.135 \\
+p$_{Cherries}$ &0 &0.204 &0.0101 &-0.0117 &\textbf{-2.63} &0.0252 &-0.0174 \\
+p$_{Dates}$ &0 &0.00221 &0.00573 &-0.0117 &0.00672 &\textbf{-3.37} &0 \\
+p$_{Apples}$ &-0.878 &-0.338 &-0.236 &0.214 &-0.613 &0 &\textbf{-0.598} \\
+p$_{Easy Peelers}$ &3.36 &0.677 &0.212 &0.00107 &-0.354 &0.175 &0.0895 \\
+p$_{Grapes}$ &-0.0136 &-0.359 &0.0439 &0.488 &-0.0112 &0.00153 &-0.031 \\
+p$_{Grapefruits}$ &0 &-0.000842 &0.000163 &-0.0014 &0.000223 &0.236 &-0.000314 \\
+p$_{Kiwis}$ &-0.306 &0.134 &0.0221 &-0.0123 &0 &0 &0.00365 \\
+p$_{Lemons}$ &-0.0446 &-0.0398 &0.0131 &0.0572 &0.44 &0.411 &-0.0197 \\
+p$_{Limes}$ &0 &0.00484 &0.0078 &-0.000514 &0.0275 &0.178 &-8.7e-05 \\
+p$_{Lychees}$ &0 &0 &-0.000343 &0.000538 &0 &0.0499 &0 \\
+p$_{Mangos}$ &0 &0.111 &-0.0121 &-0.013 &0.222 &0 &0.00117 \\
+p$_{Melons}$ &-0.041 &0.0126 &-0.056 &-0.0931 &0.00674 &0.223 &-0.0312 \\
+p$_{Nectarines}$ &6.82 &0.0501 &-0.0452 &-0.00887 &0.275 &0 &0.0232 \\
+p$_{Oranges}$ &-0.0139 &0.253 &-0.0122 &-0.0495 &0.273 &1.49 &-0.0233 \\
+p$_{Passion fruits}$ &0 &0.0237 &0.00295 &0 &0.0193 &0 &-0.000288 \\
+p$_{Paw-paws}$ &0 &0.00193 &0.000361 &-1.15e-05 &0.0263 &0 &-0.000176 \\
+p$_{Peaches}$ &0 &0.00303 &-0.00464 &0.0299 &0.303 &-0.000169 &0.0458 \\
+p$_{Pears}$ &0 &0.394 &0.197 &-0.0322 &0.525 &0.00124 &0.0297 \\
+p$_{Pineapples}$ &0 &-0.0135 &0.0192 &0.0194 &-0.0327 &0 &2.47e-06 \\
+p$_{Plums}$ &0.551 &0.0122 &-0.00602 &-0.0885 &0.0354 &-0.0113 &0.125 \\
+p$_{Pomegranates}$ &-0.532 &0.00265 &0.00256 &0.000682 &0 &0 &0.000675 \\
+p$_{Rhubarb}$ &0 &0.0109 &-0.0011 &0.000239 &0 &0 &-4.63e-05 \\
+p$_{Sharon fruits}$ &0 &-0.00701 &0.0053 &0.0123 &0.00277 &0.492 &-0.00207 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -47,33 +47,33 @@ p$_{Sharon fruits}$ &0 &-0.0332 &-0.0124 &0.121 &0.0364 &0.52 &-0.0187 \\
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Easy Peelers &Grapes &Grapefruits &Kiwis &Lemons &Limes &Lychees \\ \hline
-p$_{Apricots}$ &0.166 &-0.00534 &-0.054 &0.167 &-0.0461 &-0.0218 &0 \\
-p$_{Avocados}$ &0.0231 &-0.00399 &0 &0.00282 &-0.0172 &0.741 &0 \\
-p$_{Bananas}$ &1.49 &-0.173 &-0.241 &0.0768 &-0.00356 &-0.31 &0 \\
-p$_{Berries}$ &-0.0536 &0.251 &0.223 &-0.197 &0.28 &-0.24 &-1.31 \\
-p$_{Cherries}$ &-0.00163 &0.000253 &0 &-0.000782 &0.00815 &0.0226 &0 \\
-p$_{Dates}$ &0.0207 &-0.00241 &0.00375 &0 &0 &0.00125 &1.91e-12 \\
-p$_{Apples}$ &0.018 &0.0282 &-1.42 &0.171 &0.286 &-0.478 &0 \\
-p$_{Easy Peelers}$ &\textbf{-2.95} &-0.00116 &-0.00329 &0.000173 &0.000649 &-0.0917 &4.15e-12 \\
-p$_{Grapes}$ &-0.00497 &\textbf{-1.39} &1.02 &-0.0258 &0.114 &-0.0196 &0.0371 \\
-p$_{Grapefruits}$ &-0.000158 &0.0114 &\textbf{-4.01} &-0.00176 &0.0478 &0.0818 &0.433 \\
-p$_{Kiwis}$ &0.000354 &-0.0123 &-0.0749 &\textbf{-2.09} &-0.0632 &-0.0578 &0 \\
-p$_{Lemons}$ &0.00103 &0.0422 &1.58 &-0.0492 &\textbf{-2.05} &-0.188 &-0.315 \\
-p$_{Limes}$ &-0.00434 &-0.000216 &0.0803 &-0.00133 &-0.00559 &\textbf{-5.91} &0 \\
-p$_{Lychees}$ &0 &1.86e-06 &0.00194 &0 &-4.26e-05 &0 &\textbf{-1.39} \\
-p$_{Mangos}$ &0.149 &0.0638 &0.117 &0 &-0.0188 &0 &0 \\
-p$_{Melons}$ &-0.148 &0.209 &0.0738 &0 &-0.016 &0.804 &0 \\
-p$_{Nectarines}$ &-0.0148 &-0.000116 &-0.101 &-0.00471 &-0.158 &0.776 &0 \\
-p$_{Oranges}$ &-0.00753 &-0.14 &-0.0146 &-0.00219 &0.00319 &0.298 &0 \\
-p$_{Passion fruits}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Paw-paws}$ &-0.00185 &0.000378 &0 &0 &0 &0 &0 \\
-p$_{Peaches}$ &-0.000312 &0.0141 &0.248 &-0.163 &0.131 &-0.0793 &0 \\
-p$_{Pears}$ &0.699 &-0.091 &-0.00341 &0.0454 &0.000981 &-0.00877 &0 \\
-p$_{Pineapples}$ &-0.00367 &0.0224 &0.0709 &0.499 &0.025 &0 &-0.189 \\
-p$_{Plums}$ &-0.000581 &-0.0055 &-0.00411 &0.494 &-0.0778 &-0.0487 &0.195 \\
-p$_{Pomegranates}$ &3.89e-05 &5.88e-06 &-0.000499 &0.000544 &0 &0 &0 \\
-p$_{Rhubarb}$ &-0.0184 &0.00288 &0 &0 &0.000551 &0.0144 &0.0399 \\
-p$_{Sharon fruits}$ &-0.257 &0.169 &0.748 &0 &0.131 &0.0431 &1.2e-11 \\
+p$_{Apricots}$ &0.00548 &-2.78e-05 &0 &-0.00297 &-0.00066 &0 &0 \\
+p$_{Avocados}$ &0.0249 &-0.0166 &-0.00315 &0.0293 &-0.0133 &0.0197 &0 \\
+p$_{Bananas}$ &0.108 &0.028 &0.00846 &0.0674 &0.0607 &0.44 &-0.384 \\
+p$_{Berries}$ &0.000786 &0.452 &-0.105 &-0.0539 &0.383 &-0.0418 &0.866 \\
+p$_{Cherries}$ &-0.0117 &-0.000465 &0.000754 &0 &0.132 &0.101 &0 \\
+p$_{Dates}$ &0.00155 &1.7e-05 &0.213 &0 &0.0331 &0.174 &0.967 \\
+p$_{Apples}$ &0.104 &-0.0454 &-0.0372 &0.0254 &-0.208 &-0.0112 &0 \\
+p$_{Easy Peelers}$ &\textbf{-1.14} &-0.176 &0.178 &0.372 &-0.102 &-0.121 &-0.0614 \\
+p$_{Grapes}$ &-0.14 &\textbf{-1.28} &0.175 &-0.0458 &0.535 &-0.00518 &0 \\
+p$_{Grapefruits}$ &0.00175 &0.00215 &\textbf{-3.48} &0 &0.0323 &0.0194 &0.243 \\
+p$_{Kiwis}$ &0.0624 &-0.00964 &0 &\textbf{-2.39} &-0.0579 &0 &0 \\
+p$_{Lemons}$ &-0.0112 &0.074 &0.362 &-0.038 &\textbf{-2.48} &0.518 &2.43 \\
+p$_{Limes}$ &-0.00109 &-5.88e-05 &0.0179 &0 &0.0426 &\textbf{-5.32} &0.239 \\
+p$_{Lychees}$ &-2.81e-05 &0 &0.0113 &0 &0.0101 &0.0121 &\textbf{-7.54} \\
+p$_{Mangos}$ &-0.00935 &0.0166 &0 &0 &0.0373 &0.0579 &0 \\
+p$_{Melons}$ &-0.0741 &0.118 &1.26 &0.000817 &0.129 &1.06 &0 \\
+p$_{Nectarines}$ &0.00835 &-0.0304 &0 &0.000693 &0.0514 &0 &0 \\
+p$_{Oranges}$ &-0.0834 &-0.0434 &0 &0.00133 &0.0053 &0.529 &0 \\
+p$_{Passion fruits}$ &-0.00154 &0.00244 &0 &0.00158 &0 &0 &0 \\
+p$_{Paw-paws}$ &7.16e-05 &-2.44e-05 &0 &-0.000206 &0.000829 &0 &0 \\
+p$_{Peaches}$ &0.0346 &0.116 &-0.00455 &-0.0334 &0.123 &0 &0 \\
+p$_{Pears}$ &0.369 &-0.168 &0 &0.0602 &-0.0267 &0.0658 &0 \\
+p$_{Pineapples}$ &0.000512 &0.0392 &0 &0.0266 &0.00675 &0 &0 \\
+p$_{Plums}$ &0.112 &0.00717 &-0.00239 &0.83 &-0.135 &0 &0 \\
+p$_{Pomegranates}$ &0.00105 &4.11e-05 &0 &0.00203 &0.0081 &0 &0 \\
+p$_{Rhubarb}$ &-0.000242 &0.00033 &0.0107 &0 &0.00705 &0 &0 \\
+p$_{Sharon fruits}$ &-0.0258 &0.0153 &0.256 &0 &0.205 &0.656 &0 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -83,33 +83,33 @@ p$_{Sharon fruits}$ &-0.257 &0.169 &0.748 &0 &0.131 &0.0431 &1.2e-11 \\
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Mangos &Melons &Nectarines &Oranges &Passion fruits &Paw-paws &Peaches \\ \hline
-p$_{Apricots}$ &-0.0181 &-0.0048 &0.101 &-0.0884 &-3.86 &0 &0.0256 \\
-p$_{Avocados}$ &0.00786 &0.0581 &0.0264 &0.0496 &0 &0 &0 \\
-p$_{Bananas}$ &-0.0108 &-0.182 &0.0576 &-0.381 &0 &-0.439 &-0.0502 \\
-p$_{Berries}$ &-0.0158 &-0.104 &-0.0172 &-0.071 &0.526 &-0.00144 &0.165 \\
-p$_{Cherries}$ &0.00349 &0 &0.00118 &0.00865 &0 &0.339 &-0.000448 \\
-p$_{Dates}$ &0 &0.0216 &-0.0057 &0.024 &0 &0 &0 \\
-p$_{Apples}$ &0.784 &-0.434 &1.65 &-0.124 &2.57 &-1.83 &0.00121 \\
-p$_{Easy Peelers}$ &0.158 &-0.196 &-0.00891 &-0.00513 &0 &-0.43 &-0.000539 \\
-p$_{Grapes}$ &0.146 &1.2 &-0.000298 &-0.411 &0 &0.378 &0.105 \\
-p$_{Grapefruits}$ &0.00598 &0.00469 &-0.00292 &-0.000478 &0 &0 &0.0206 \\
-p$_{Kiwis}$ &0 &0 &-0.00579 &-0.00306 &0 &0 &-0.576 \\
-p$_{Lemons}$ &-0.0319 &-0.0336 &-0.151 &0.00347 &0 &0 &0.36 \\
-p$_{Limes}$ &0 &0.0502 &0.022 &0.00961 &0 &0 &-0.00648 \\
+p$_{Apricots}$ &0 &-0.000205 &0.155 &-7.8e-05 &0 &0 &0 \\
+p$_{Avocados}$ &0.149 &0.00142 &0.0258 &0.0321 &0.399 &0.349 &0.001 \\
+p$_{Bananas}$ &-0.224 &-0.0876 &-0.323 &-0.0215 &0.688 &0.908 &-0.0213 \\
+p$_{Berries}$ &-0.349 &-0.21 &-0.0912 &-0.125 &-2e-11 &-0.0415 &0.198 \\
+p$_{Cherries}$ &0.267 &0.000685 &0.128 &0.0312 &0.293 &4.29 &0.0904 \\
+p$_{Dates}$ &0 &0.00606 &0 &0.0455 &0 &0 &-1.35e-05 \\
+p$_{Apples}$ &0.0496 &-0.111 &0.378 &-0.0936 &-0.153 &-1.01 &0.481 \\
+p$_{Easy Peelers}$ &-0.34 &-0.227 &0.117 &-0.287 &-0.703 &0.352 &0.311 \\
+p$_{Grapes}$ &0.482 &0.287 &-0.338 &-0.119 &0.889 &-0.0955 &0.834 \\
+p$_{Grapefruits}$ &0 &0.0379 &0 &0 &0 &0 &-0.000403 \\
+p$_{Kiwis}$ &0 &0.00042 &0.00163 &0.000768 &0.121 &-0.17 &-0.0505 \\
+p$_{Lemons}$ &0.149 &0.0436 &0.0791 &0.00201 &0 &0.449 &0.122 \\
+p$_{Limes}$ &0.019 &0.0293 &0 &0.0165 &0 &0 &0 \\
 p$_{Lychees}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Mangos}$ &\textbf{-6.69} &0.105 &0.828 &0.432 &0 &0 &0.00696 \\
-p$_{Melons}$ &0.0848 &\textbf{-6.85} &0.0519 &1.04 &0 &0 &0.0119 \\
-p$_{Nectarines}$ &0.768 &0.114 &\textbf{-4.05} &-0.00961 &0 &0.0146 &-0.00358 \\
-p$_{Oranges}$ &0.208 &2.02 &-0.00846 &\textbf{-2.65} &0 &1.03 &-0.00396 \\
-p$_{Passion fruits}$ &0 &0 &0 &0 &\textbf{-4.88} &0 &0 \\
-p$_{Paw-paws}$ &0 &0 &3.77e-05 &0.00303 &0 &\textbf{-2.82} &0 \\
-p$_{Peaches}$ &0.00429 &0.00906 &-0.00124 &-0.00156 &0 &0 &\textbf{-2.05} \\
-p$_{Pears}$ &0.409 &0.668 &0.0217 &0.171 &0 &1.69 &-0.00609 \\
-p$_{Pineapples}$ &0 &0 &-0.0232 &0 &0 &0 &0.171 \\
-p$_{Plums}$ &0.00596 &-0.0104 &0.106 &0 &0 &0 &-0.363 \\
-p$_{Pomegranates}$ &0 &0 &-0.000325 &0.00376 &0 &0 &-0.00301 \\
-p$_{Rhubarb}$ &-0.00339 &0.0706 &-0.00707 &0.0265 &0 &0 &-5.56e-06 \\
-p$_{Sharon fruits}$ &0.346 &0.509 &0.228 &-0.0308 &0 &0 &0 \\
+p$_{Mangos}$ &\textbf{-4.7} &0.0456 &0.253 &0.024 &0 &0 &0.0299 \\
+p$_{Melons}$ &0.541 &\textbf{-1.81} &0.0612 &0.401 &0.0461 &0 &0.0297 \\
+p$_{Nectarines}$ &0.659 &0.0134 &\textbf{-2.67} &0.0483 &0 &0 &0.0833 \\
+p$_{Oranges}$ &0.253 &0.357 &0.197 &\textbf{-1.83} &0.547 &0 &0.212 \\
+p$_{Passion fruits}$ &0 &0.000309 &0 &0.00412 &\textbf{-3.12} &0 &-0.0128 \\
+p$_{Paw-paws}$ &0 &0 &0 &0 &0 &\textbf{-6.63} &2.43e-05 \\
+p$_{Peaches}$ &0.12 &0.0101 &0.129 &0.0809 &-0.65 &0.0133 &\textbf{-3.64} \\
+p$_{Pears}$ &0.558 &0.279 &0.1 &0.434 &0 &0.738 &0.0703 \\
+p$_{Pineapples}$ &0.0734 &0 &0 &0 &0 &0 &0.0347 \\
+p$_{Plums}$ &0.0124 &-0.000398 &0.0075 &-0.00211 &-0.262 &-0.439 &-0.0724 \\
+p$_{Pomegranates}$ &0 &0 &-0.00361 &0.00295 &0.00605 &0 &0 \\
+p$_{Rhubarb}$ &0 &0.00498 &0 &0.00733 &0 &0 &-2.64e-05 \\
+p$_{Sharon fruits}$ &-0.167 &0.0244 &0.0196 &0.0823 &0 &0 &0 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -119,33 +119,33 @@ p$_{Sharon fruits}$ &0.346 &0.509 &0.228 &-0.0308 &0 &0 &0 \\
 \begin{center}
 \begin{tabular}{lcccccc} \hline \hline
 Price &Pears &Pineapples &Plums &Pomegranates &Rhubarb &Sharon fruits \\ \hline
-p$_{Apricots}$ &0.0611 &0.189 &0.323 &0.374 &0 &0 \\
-p$_{Avocados}$ &0.181 &-0.000144 &0.00639 &0.000196 &0 &-0.00372 \\
-p$_{Bananas}$ &0.924 &0.137 &0.0647 &0.213 &-0.379 &-0.0307 \\
-p$_{Berries}$ &-0.101 &0.231 &-0.102 &-0.0498 &-0.2 &0.282 \\
-p$_{Cherries}$ &0.0167 &-0.000218 &-0.000826 &0 &0 &0.000716 \\
-p$_{Dates}$ &0.00199 &-9.58e-06 &2.67e-06 &0 &0.00147 &0.0126 \\
-p$_{Apples}$ &0.256 &0.325 &1.38 &0.105 &-0.0129 &-0.163 \\
-p$_{Easy Peelers}$ &0.827 &-0.004 &-0.000508 &0.00125 &-0.758 &-0.162 \\
-p$_{Grapes}$ &-0.463 &0.105 &-0.0207 &0.000813 &0.51 &0.458 \\
-p$_{Grapefruits}$ &-0.000194 &0.00372 &-0.000173 &-0.000773 &0 &0.0227 \\
-p$_{Kiwis}$ &0.11 &1.11 &0.884 &0.0358 &0 &0 \\
-p$_{Lemons}$ &0.00185 &0.0434 &-0.109 &0 &0.0362 &0.131 \\
-p$_{Limes}$ &-0.000491 &0 &-0.00201 &0 &0.0281 &0.00129 \\
-p$_{Lychees}$ &0 &-4.44e-05 &3.67e-05 &0 &0.000355 &0 \\
-p$_{Mangos}$ &0.69 &0 &0.0049 &0 &-0.131 &0.205 \\
-p$_{Melons}$ &0.599 &0 &-0.00686 &0 &2.21 &0.243 \\
-p$_{Nectarines}$ &0.0427 &-0.042 &0.154 &-0.0174 &-0.486 &0.24 \\
-p$_{Oranges}$ &0.297 &0 &0 &0.182 &1.6 &-0.0285 \\
-p$_{Passion fruits}$ &0 &0 &0 &0 &0 &0 \\
-p$_{Paw-paws}$ &0.00859 &0 &0 &0 &0 &0 \\
-p$_{Peaches}$ &-0.00417 &0.109 &-0.184 &-0.056 &-0.000133 &0 \\
-p$_{Pears}$ &\textbf{-5.06} &0.0803 &0.0166 &0.0822 &1.56 &-0.00984 \\
-p$_{Pineapples}$ &0.0873 &\textbf{-3.57} &0.0288 &0.166 &0.00102 &0 \\
-p$_{Plums}$ &0.0224 &0.0359 &\textbf{-3.83} &-0.493 &0.218 &0 \\
-p$_{Pomegranates}$ &0.00302 &0.00563 &-0.0134 &\textbf{-2.88} &0 &0 \\
-p$_{Rhubarb}$ &0.0448 &2.7e-05 &0.00461 &0 &\textbf{-8.74} &0.00136 \\
-p$_{Sharon fruits}$ &-0.0185 &0 &0 &0 &0.089 &\textbf{-2.18} \\
+p$_{Apricots}$ &0 &0 &0.00329 &-0.2 &0 &0 \\
+p$_{Avocados}$ &0.0285 &-0.0068 &0.00165 &0.0226 &0.167 &-0.0101 \\
+p$_{Bananas}$ &0.198 &0.135 &-0.0112 &0.303 &-0.233 &0.106 \\
+p$_{Berries}$ &-0.0466 &0.196 &-0.239 &0.116 &0.0735 &0.353 \\
+p$_{Cherries}$ &0.0342 &-0.0149 &0.00431 &0 &0 &0.00359 \\
+p$_{Dates}$ &2.17e-05 &0 &-0.000368 &0 &0 &0.17 \\
+p$_{Apples}$ &0.0682 &3.96e-05 &0.533 &0.182 &-0.0225 &-0.0944 \\
+p$_{Easy Peelers}$ &0.726 &0.00703 &0.41 &0.244 &-0.101 &-1.01 \\
+p$_{Grapes}$ &-0.263 &0.429 &0.021 &0.00759 &0.11 &0.477 \\
+p$_{Grapefruits}$ &0 &0 &-8.6e-05 &0 &0.0437 &0.0984 \\
+p$_{Kiwis}$ &0.0199 &0.0612 &0.51 &0.0788 &0 &0 \\
+p$_{Lemons}$ &-0.00579 &0.0102 &-0.0543 &0.206 &0.324 &0.881 \\
+p$_{Limes}$ &0.00117 &0 &0 &0 &0 &0.232 \\
+p$_{Lychees}$ &0 &0 &0 &0 &0 &0 \\
+p$_{Mangos}$ &0.0302 &0.0277 &0.00125 &0 &0 &-0.18 \\
+p$_{Melons}$ &0.179 &0 &-0.000476 &0 &0.678 &0.311 \\
+p$_{Nectarines}$ &0.0141 &0 &0.00197 &-0.0598 &0 &0.0548 \\
+p$_{Oranges}$ &0.248 &0 &-0.00225 &0.199 &0.889 &0.934 \\
+p$_{Passion fruits}$ &0 &0 &-0.0021 &0.00307 &0 &0 \\
+p$_{Paw-paws}$ &0.000295 &0 &-0.000327 &0 &0 &0 \\
+p$_{Peaches}$ &0.0155 &0.053 &-0.0294 &0 &-0.00122 &0 \\
+p$_{Pears}$ &\textbf{-2.15} &0.000314 &-0.0263 &0.0819 &0 &1.76 \\
+p$_{Pineapples}$ &4.49e-05 &\textbf{-2.35} &0.0793 &0 &0 &0 \\
+p$_{Plums}$ &-0.0141 &0.298 &\textbf{-1.97} &-0.522 &0 &0 \\
+p$_{Pomegranates}$ &0.000696 &0 &-0.00827 &\textbf{-3.85} &0 &0 \\
+p$_{Rhubarb}$ &0 &0 &0 &0 &\textbf{-6.03} &0 \\
+p$_{Sharon fruits}$ &0.0885 &0 &0 &0 &0 &\textbf{-5.36} \\
 \end{tabular}
 \end{center}
 \end{table}
