--- a/output/A27_2018MAY/figures/taxresults.tex
+++ b/output/A27_2018MAY/figures/taxresults.tex
@@ -13,38 +13,38 @@
 \begin{tabular}{lcccccc} \hline \hline
  &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 \\ 
 Fruit & Baseline (kg) &EU tariff &UK cost shock &Merger &Subsidy &VAT \\ \hline
-Apricots &3.12e-06 &-13.8\% &-0.121\% &-4.96\% &20.7\% &-28.3\% \\
-Avocados &6.07e-07 &-1.65\% &-3.57\% &-3.09\% &18.8\% &-29.2\% \\
-Bananas &2.22e-05 &3.31\% &1.08\% &-0.502\% &4.33\% &-7.63\% \\
-Berries &7.11e-06 &-1.71\% &-3.16\% &-0.581\% &2.57\% &-5.31\% \\
-Cherries &6.58e-08 &-11\% &-8.41\% &-5.74\% &52.4\% &-57.8\% \\
+Apricots &2.39e-08 &-21.5\% &-1.15\% &-9.06\% &29.6\% &-29.7\% \\
+Avocados &4.32e-07 &1.42\% &-1.26\% &-2.44\% &14.3\% &-22.7\% \\
+Bananas &1.01e-05 &1.97\% &0.566\% &-0.644\% &4.28\% &-8.1\% \\
+Berries &4.96e-06 &-1.3\% &-3.75\% &-0.692\% &3.15\% &-5.95\% \\
+Cherries &2.36e-07 &-2.45\% &-7.37\% &-1.4\% &14.9\% &-23.4\% \\
 \hline
-Dates &3.7e-07 &0.994\% &-6.38\% &-2.61\% &26.3\% &-37.5\% \\
-Apples &2.72e-05 &-1.12\% &-1.54\% &-0.86\% &5.23\% &-10.1\% \\
-Easy Peelers &4.45e-06 &-8.35\% &0.72\% &-1.8\% &9.2\% &-16\% \\
-Grapes &1.05e-05 &-3.91\% &0.922\% &-1.44\% &11\% &-18.7\% \\
-Grapefruits &8.16e-07 &8.16\% &-1.47\% &-3.29\% &20.7\% &-25.7\% \\
+Dates &2.89e-07 &5.69\% &-5.05\% &0.481\% &7.42\% &-14.6\% \\
+Apples &1.2e-05 &0.0861\% &-0.283\% &-0.602\% &3.97\% &-7.31\% \\
+Easy Peelers &9.56e-06 &-2.46\% &0.805\% &-1.18\% &6.92\% &-12.4\% \\
+Grapes &6.89e-06 &-3.07\% &1.83\% &-1.24\% &9.3\% &-16.8\% \\
+Grapefruits &2.08e-07 &3.49\% &-0.241\% &-2.51\% &11.5\% &-20.8\% \\
 \hline
-Kiwis &5.98e-06 &-12.5\% &-0.377\% &-1.72\% &11.7\% &-18\% \\
-Lemons &4.19e-06 &-8.95\% &1.96\% &-2.48\% &15.8\% &-23.9\% \\
-Limes &4.2e-07 &-9.6\% &0.455\% &-8.55\% &62.9\% &-60.3\% \\
-Lychees &4.16e-09 &-2.32\% &-8.25\% &-2.65\% &26.7\% &-11.4\% \\
-Mangos &2.73e-06 &13.7\% &2.15\% &-1.84\% &24.3\% &-38.7\% \\
+Kiwis &1.75e-06 &-11.5\% &-0.0034\% &-1.69\% &12.3\% &-19.6\% \\
+Lemons &1.26e-06 &-9.77\% &1.76\% &-2.28\% &13.5\% &-20.4\% \\
+Limes &1.58e-07 &-6.59\% &0.357\% &-4.62\% &21.2\% &-33.5\% \\
+Lychees &1.69e-08 &11.8\% &3.13\% &-3.68\% &36.9\% &-52.4\% \\
+Mangos &3.59e-07 &13.6\% &-0.474\% &-2.7\% &26.5\% &-40.4\% \\
 \hline
-Melons &3.93e-06 &-0.864\% &0.328\% &-4.13\% &33.6\% &-45.7\% \\
-Nectarines &4.19e-06 &-17.6\% &3.06\% &-3.67\% &16.9\% &-26.1\% \\
-Oranges &3.77e-06 &-7.7\% &-0.0225\% &-3.97\% &25.2\% &-37.9\% \\
-Passion fruits &8.06e-09 &-4.5\% &6.21\% &-7.22\% &53.1\% &-19.5\% \\
-Paw-paws &4.88e-08 &3.09\% &-2.41\% &-3.18\% &18.6\% &-45.5\% \\
+Melons &6.35e-06 &-0.612\% &-0.7\% &-1.95\% &13.9\% &-23.2\% \\
+Nectarines &8.65e-07 &-12\% &1.35\% &-3.95\% &19.5\% &-30.9\% \\
+Oranges &2.97e-06 &-3.25\% &0.245\% &-2.2\% &13\% &-23.2\% \\
+Passion fruits &6.14e-08 &7.31\% &2.62\% &-2.87\% &18.9\% &-28.1\% \\
+Paw-paws &8.42e-09 &21\% &23\% &-1.85\% &16.7\% &-15.6\% \\
 \hline
-Peaches &2.25e-06 &-18.1\% &0.705\% &-3.3\% &25.6\% &-34.1\% \\
-Pears &3.87e-06 &-18.2\% &-7.93\% &-2.55\% &18.7\% &-28.4\% \\
-Pineapples &4.33e-06 &14.2\% &1.85\% &-0.393\% &13.9\% &-21.8\% \\
-Plums &3.62e-06 &-2.7\% &0.837\% &-1.95\% &15.4\% &-23\% \\
-Pomegranates &1.42e-07 &-9.16\% &-0.00817\% &-2.53\% &26.7\% &-36.7\% \\
+Peaches &2.18e-06 &-26.6\% &2.37\% &-1.81\% &13.9\% &-22.6\% \\
+Pears &5.15e-06 &-7.35\% &-3.61\% &-1.14\% &8.41\% &-16\% \\
+Pineapples &1.48e-06 &4.91\% &1.34\% &-0.829\% &12.7\% &-20.6\% \\
+Plums &2.97e-06 &-1.43\% &-0.786\% &-1.24\% &8.2\% &-13.9\% \\
+Pomegranates &6.66e-08 &-12.2\% &0.677\% &-3.41\% &39.2\% &-44.4\% \\
 \hline
-Rhubarb &2.12e-07 &14\% &-54.8\% &-8.76\% &54.7\% &-59.3\% \\
-Sharon fruits &2.44e-06 &2.57\% &1.28\% &-1.84\% &10.2\% &-18.8\% \\
+Rhubarb &4.82e-08 &8.78\% &-56.6\% &-7.49\% &56.6\% &-59.8\% \\
+Sharon fruits &1.56e-07 &15.4\% &2.51\% &-2.54\% &12.7\% &-22.6\% \\
  \hline \hline
 \multicolumn{7}{p{1.0 \textwidth}}{Note: The first column shows baseline demand for each fruit (kilograms per household per shopping trip). The remaining columns show the percentage change in demand resulting from the change in tax or prices.}
 \end{tabular}}
@@ -58,38 +58,38 @@ Sharon fruits &2.44e-06 &2.57\% &1.28\% &-1.84\% &10.2\% &-18.8\% \\
 \begin{tabular}{lcccccc} \hline \hline
  &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 \\ 
 Fruit & Baseline &EU tariff &UK cost shock &Merger &Subsidy &VAT \\ \hline
-Apricots &3.65 &6.52\% &-5.6e-11\% &2.21\% &-10\% &20\% \\
-Avocados &4.4 &1.93\% &-6.52e-11\% &1.73\% &-10\% &20\% \\
-Bananas &2.66 &-2.6e-11\% &-2.6e-11\% &1.56\% &-10\% &20\% \\
-Berries &7.81 &3.54\% &4.3\% &1.75\% &-10\% &20\% \\
-Cherries &7.12 &3.47\% &1.9\% &1.45\% &-10\% &20\% \\
+Apricots &3.44 &6.52\% &-7.15e-11\% &2.21\% &-10\% &20\% \\
+Avocados &4.3 &1.93\% &6.19e-11\% &1.73\% &-10\% &20\% \\
+Bananas &2.55 &-4.67e-11\% &-4.67e-11\% &1.56\% &-10\% &20\% \\
+Berries &7.49 &3.54\% &4.3\% &1.75\% &-10\% &20\% \\
+Cherries &7.1 &3.47\% &1.9\% &1.45\% &-10\% &20\% \\
 \hline
-Dates &1.55 &0.05\% &1.16e-11\% &1.08\% &-10\% &20\% \\
-Apples &7.61 &2.86\% &1.54\% &1.66\% &-10\% &20\% \\
-Easy Peelers &3.38 &4.24\% &-2.77e-11\% &1.71\% &-10\% &20\% \\
-Grapes &6.14 &3.39\% &0.08\% &1.46\% &-10\% &20\% \\
-Grapefruits &0.886 &0.87\% &-4.81e-11\% &1.75\% &-10\% &20\% \\
+Dates &1.54 &0.05\% &1.97e-11\% &1.08\% &-10\% &20\% \\
+Apples &4.91 &2.86\% &1.54\% &1.66\% &-10\% &20\% \\
+Easy Peelers &5.28 &4.24\% &-6.45e-11\% &1.71\% &-10\% &20\% \\
+Grapes &5.84 &3.39\% &0.08\% &1.46\% &-10\% &20\% \\
+Grapefruits &2.39 &0.87\% &-3.6e-11\% &1.75\% &-10\% &20\% \\
 \hline
-Kiwis &5.15 &6.65\% &-4.13e-11\% &1.55\% &-10\% &20\% \\
-Lemons &5.71 &5.21\% &4.76e-11\% &1.7\% &-10\% &20\% \\
-Limes &1.69 &2.27\% &-2.2e-11\% &1.91\% &-10\% &20\% \\
-Lychees &0.779 &8.77e-12\% &8.77e-12\% &1.4\% &-10\% &20\% \\
-Mangos &5.17 &-3.72e-11\% &-3.72e-11\% &1.38\% &-10\% &20\% \\
+Kiwis &4.84 &6.65\% &7.56e-11\% &1.55\% &-10\% &20\% \\
+Lemons &4.41 &5.21\% &-1.67e-11\% &1.7\% &-10\% &20\% \\
+Limes &2.89 &2.27\% &-7.48e-11\% &1.91\% &-10\% &20\% \\
+Lychees &1.37 &-6.87e-11\% &-6.87e-11\% &1.4\% &-10\% &20\% \\
+Mangos &3.87 &6.5e-11\% &6.5e-11\% &1.38\% &-10\% &20\% \\
 \hline
-Melons &2.9 &1.81\% &3.77e-11\% &1.51\% &-10\% &20\% \\
-Nectarines &5.97 &5.96\% &1.07e-11\% &1.91\% &-10\% &20\% \\
-Oranges &5.84 &2.88\% &-6.79e-11\% &1.66\% &-10\% &20\% \\
-Passion fruits &0.997 &3.73e-11\% &3.73e-11\% &1.51\% &-10\% &20\% \\
-Paw-paws &1.33 &5.28e-11\% &5.28e-11\% &1.48\% &-10\% &20\% \\
+Melons &2.6 &1.81\% &-8.08e-11\% &1.51\% &-10\% &20\% \\
+Nectarines &4.17 &5.96\% &9.81e-11\% &1.91\% &-10\% &20\% \\
+Oranges &4.94 &2.88\% &8.79e-11\% &1.66\% &-10\% &20\% \\
+Passion fruits &1.8 &6.02e-12\% &6.02e-12\% &1.51\% &-10\% &20\% \\
+Paw-paws &1.22 &-1.02e-10\% &-1.02e-10\% &1.48\% &-10\% &20\% \\
 \hline
-Peaches &3.86 &8.97\% &6.73e-11\% &1.54\% &-10\% &20\% \\
-Pears &3.28 &5.15\% &1.54\% &1.59\% &-10\% &20\% \\
-Pineapples &3.19 &3.74e-11\% &3.74e-11\% &1.22\% &-10\% &20\% \\
-Plums &4.75 &3.19\% &0.26\% &1.61\% &-10\% &20\% \\
-Pomegranates &3.29 &3.71\% &-2.92e-11\% &1.14\% &-10\% &20\% \\
+Peaches &2.57 &8.97\% &-1.67e-11\% &1.54\% &-10\% &20\% \\
+Pears &4.98 &5.15\% &1.54\% &1.59\% &-10\% &20\% \\
+Pineapples &2.48 &6.22e-11\% &6.22e-11\% &1.22\% &-10\% &20\% \\
+Plums &4.65 &3.19\% &0.26\% &1.61\% &-10\% &20\% \\
+Pomegranates &3.27 &3.71\% &-5.3e-11\% &1.14\% &-10\% &20\% \\
 \hline
-Rhubarb &1.72 &0.11\% &9.87\% &1.78\% &-10\% &20\% \\
-Sharon fruits &9.77 &0.5\% &-1.53e-11\% &1.7\% &-10\% &20\% \\
+Rhubarb &2.51 &0.11\% &9.87\% &1.78\% &-10\% &20\% \\
+Sharon fruits &8.27 &0.5\% &9.95e-11\% &1.7\% &-10\% &20\% \\
  \hline \hline
 \multicolumn{7}{p{1.0 \textwidth}}{Note: The first column shows the baseline price for each fruit (GBP per kilogram). The remaining columns show the percentage impact of the change in tax or prices.}
 \end{tabular}}
@@ -104,23 +104,23 @@ Sharon fruits &9.77 &0.5\% &-1.53e-11\% &1.7\% &-10\% &20\% \\
  &  & Scenario 1 & Scenario 2 & Scenario 3 & Scenario 4 & Scenario 5 \\
  & Baseline &EU tariff &UK cost shock &Merger &Subsidy &VAT \\ \hline
 Consumer expenditure & & & & & & \\
-10th percentile &4.18 &-4.95\% &-0.675\% &-2.14\% &11.6\% &-25.2\% \\
-25th percentile &8.91 &-1.41\% &0.353\% &-0.572\% &3.26\% &-9.81\% \\
-50th percentile &15.6 &-0.165\% &0.607\% &0.00975\% &-0.807\% &-0.813\% \\
-75th percentile &22.8 &0.624\% &0.747\% &0.437\% &-2.57\% &4.28\% \\
-90th percentile &29.5 &0.206\% &0.569\% &0.224\% &-2.24\% &4.21\% \\
+10th percentile &6.19 &-0.369\% &0.48\% &0.0333\% &0.225\% &-2.94\% \\
+25th percentile &10 &0.0411\% &0.646\% &0.224\% &-1.65\% &0.419\% \\
+50th percentile &15.3 &0.559\% &0.59\% &0.377\% &-3.19\% &3.58\% \\
+75th percentile &21.8 &0.892\% &0.537\% &0.503\% &-3.68\% &5.16\% \\
+90th percentile &29.7 &0.841\% &0.478\% &0.494\% &-3.58\% &4.93\% \\
 \hline 
 Change in consumer surplus (GBP) & & & & & & \\
-10th percentile &1.95 &-0.161 &-0.0387 &-0.0744 &0.581 &-0.836 \\
-25th percentile &6.16 &-0.325 &-0.0949 &-0.17 &1.07 &-1.74 \\
-50th percentile &15.6 &-0.548 &-0.158 &-0.287 &1.71 &-2.98 \\
-75th percentile &35 &-0.642 &-0.204 &-0.361 &2.35 &-4.4 \\
-90th percentile &55.2 &-0.688 &-0.295 &-0.412 &2.74 &-5.16 \\
+10th percentile &6.24 &-0.259 &-0.0723 &-0.126 &0.855 &-1.47 \\
+25th percentile &12.6 &-0.366 &-0.106 &-0.184 &1.28 &-2.2 \\
+50th percentile &22.6 &-0.529 &-0.148 &-0.265 &1.78 &-3.06 \\
+75th percentile &37.7 &-0.73 &-0.2 &-0.35 &2.31 &-4.14 \\
+90th percentile &55.6 &-0.87 &-0.277 &-0.425 &2.73 &-4.82 \\
 \hline 
 Per capita effects & & & & & & \\
-Consumer surplus (GBP) & 22.9 &-0.493 &-0.155 &-0.267 &1.73 &-3.01 \\
-Tax revenue (GBP) & 0.0 &1.8e-05 &5.75e-06 &1e-05 &-6.85e-05 &0.000104 \\
-Firm Revenue & 0.000622 &-1.88e-05 &-2.78e-06 &-9.5e-06 &6.35e-05 &-0.000103 \\
+Consumer surplus (GBP) & 27.5 &-0.553 &-0.157 &-0.272 &1.75 &-3.14 \\
+Tax revenue (GBP) & 0.0 &1.02e-05 &2.93e-06 &5.1e-06 &-3.43e-05 &5.5e-05 \\
+Firm Revenue & 0.000318 &-7.97e-06 &-1.26e-06 &-3.72e-06 &2.45e-05 &-4.31e-05 \\
  \hline \hline
 \multicolumn{7}{p{1.2 \textwidth}}{Note: The first column shows the baseline values for expenditure, consumer surplus, firm revenue and tax revenue. All amounts are measured in pounds per household per shopping trip. Columns 2 - 7 show the percentage change in expenditure, the absolute change in consumer surplus, the absolute change in firm revenue and the absolute change in tax revenue arising in each scenario. Because of quasilinear utility the change in consumer surplus equals compensating variation.}
 \end{tabular}}
